formatted everything in pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,9 @@ layout: landing.njk
 customcss: /css/custom/homepage.css
 ---
 
-{% include "../src/_includes/modules/header-primary-banner.html" %}
-{% include "../src/_includes/modules/section-icon-blocks.html" %}
-{% include "../src/_includes/modules/three-cards.html" %}
-{% include "../src/_includes/modules/timeline-angled.html" %}
-{% include "../src/_includes/modules/two-cards.html" %}
-{% include "../src/_includes/modules/three-cards-blue.html" %}
+{% include "../src/_includes/modules/header-primary-banner.html" %} {% include
+"../src/_includes/modules/section-icon-blocks.html" %} {% include
+"../src/_includes/modules/three-cards.html" %} {% include
+"../src/_includes/modules/timeline-angled.html" %} {% include
+"../src/_includes/modules/two-cards.html" %} {% include
+"../src/_includes/modules/three-cards-blue.html" %}
