--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -4,190 +4,239 @@ landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
 ---
+
 <div class="row">
- <div class="col-md-3" role="complementary">
-  <!-- Side navigation -->
-  <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
-   <ul class="list-navigation">
-    <li>
-     <a class="landing back" href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes
-      shortcuts</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html" class="active">Gradient
-      backgrounds</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/text-accent-colors.html">Text accent colors</a>
-    </li>
-   </ul>
-   </li>
-   </ul>
-  </nav>
- </div>
- <div class="col-md-9 m-b-lg">
-  <h1 class="mt-lg-0">Gradient Gackgrounds</h1>
-  <nav class="page-navigation"></nav>
-
-  <p>You can use gradient backgrounds to help with your website design. These are typically used within featured
-   content banners and cards.
-  </p>
-  <h2>Linear gradients</h2>
-
-  <!--TABS-->
-  <div class="tabs responsive">
-   <ul class="nav-tabs">
-    <li>
-     <a href="#section1">Example</a>
-    </li>
-    <li>
-     <a href="#section2">Source code</a>
-    </li>
-   </ul>
-
-   <!--Examples-->
-   <section id="section1" class="tab-pane">
-    <div class="card-header" id="heading-example1">
-     <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-      data-hash="#pane-example1" title="Example tab header">
-      Example
-     </a>
-    </div>
-    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-     <div class="p-a-sm">
-      {% include "../../src/_includes/modules/gradient-linear.html" %}
-     </div>
-    </div>
-   </section>
-
-   <!--HTML-->
-   <section id="section2" class="tab-pane">
-    <div class="card-header" id="heading-html1">
-     <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-      aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-      Source code
-     </a>
-    </div>
-    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-     <div class="p-a-sm">
-      <h4>Primary</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-primary-gradient"></div></code></pre>
-
-      <h4>Highlight</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-highlight-gradient"></div></code></pre>
-
-      <h4>Standout</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-standout-gradient"></div></code></pre>
-
-      <h4>Secondary</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-secondary-gradient"></div></code></pre>
-
-      <h4>Primary-standout</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-primary-standout-gradient"></div></code></pre>
-
-      <h4>Primary-highlight</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-primary-highlight-gradient"></div></code></pre>
-
-      <h4>Primary-secondary</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-primary-secondary-gradient"></div></code></pre>
-
-      <h4>Standout-highlight</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-standout-highlight-gradient"></div></code></pre>
-
-      <h4>Danger-warning</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-danger-warning-gradient"></div></code></pre>
-
-      <h4>Info-success</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-info-success-gradient"></div></code></pre>
-     </div>
-    </div>
-   </section>
-
+  <div class="col-md-3" role="complementary">
+    <!-- Side navigation -->
+    <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
+      <ul class="list-navigation">
+        <li>
+          <a
+            class="landing back"
+            href="/get-started/css-classes-shortcuts/"
+            id="color-schemes-list">
+            CSS classes shortcuts
+          </a>
+        </li>
+        <li>
+          <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">
+            Utility CSS classes
+          </a>
+        </li>
+        <li>
+          <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
+        </li>
+        <li>
+          <a
+            href="/get-started/css-classes-shortcuts/gradient-backgrounds.html"
+            class="active">
+            Gradient backgrounds
+          </a>
+        </li>
+        <li>
+          <a href="/get-started/css-classes-shortcuts/text-accent-colors.html">
+            Text accent colors
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
-  <!--END TABS-->
+  <div class="col-md-9 m-b-lg">
+    <h1 class="mt-lg-0">Gradient Gackgrounds</h1>
+    <nav class="page-navigation"></nav>
 
-  <h2>Radial gradients</h2>
-  <!--TABS-->
-  <div class="tabs responsive">
-   <ul class="nav-tabs">
-    <li>
-     <a href="#section3">Example</a>
-    </li>
-    <li>
-     <a href="#section4">Source code</a>
-    </li>
-   </ul>
+    <p>
+      You can use gradient backgrounds to help with your website design. These
+      are typically used within featured content banners and cards.
+    </p>
+    <h2>Linear gradients</h2>
 
-   <!--Examples-->
-   <section id="section3" class="tab-pane">
-    <div class="card-header" id="heading-example2">
-     <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-      data-hash="#pane-example2" title="Example tab header">
-      Example
-     </a>
+    <!--TABS-->
+    <div class="tabs responsive">
+      <ul class="nav-tabs">
+        <li>
+          <a href="#section1">Example</a>
+        </li>
+        <li>
+          <a href="#section2">Source code</a>
+        </li>
+      </ul>
+
+      <!--Examples-->
+      <section id="section1" class="tab-pane">
+        <div class="card-header" id="heading-example1">
+          <a
+            data-bs-toggle="collapse"
+            href="#collapse-example1"
+            aria-expanded="true"
+            aria-controls="collapse-example1"
+            data-hash="#pane-example1"
+            title="Example tab header">
+            Example
+          </a>
+        </div>
+        <div
+          id="collapse-example1"
+          class="collapse show p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-example1">
+          <div class="p-a-sm">
+            {% include "../../src/_includes/modules/gradient-linear.html" %}
+          </div>
+        </div>
+      </section>
+
+      <!--HTML-->
+      <section id="section2" class="tab-pane">
+        <div class="card-header" id="heading-html1">
+          <a
+            class="collapsed"
+            data-bs-toggle="collapse"
+            href="#collapse-html1"
+            aria-expanded="false"
+            aria-controls="collapse-html1"
+            data-hash="#pane-html1"
+            title="HTML Source code tab header">
+            Source code
+          </a>
+        </div>
+        <div
+          id="collapse-html1"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-html1">
+          <div class="p-a-sm">
+            <h4>Primary</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-primary-gradient"></div></code></pre>
+
+            <h4>Highlight</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-highlight-gradient"></div></code></pre>
+
+            <h4>Standout</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-standout-gradient"></div></code></pre>
+
+            <h4>Secondary</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-secondary-gradient"></div></code></pre>
+
+            <h4>Primary-standout</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-primary-standout-gradient"></div></code></pre>
+
+            <h4>Primary-highlight</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-primary-highlight-gradient"></div></code></pre>
+
+            <h4>Primary-secondary</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-primary-secondary-gradient"></div></code></pre>
+
+            <h4>Standout-highlight</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-standout-highlight-gradient"></div></code></pre>
+
+            <h4>Danger-warning</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-danger-warning-gradient"></div></code></pre>
+
+            <h4>Info-success</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-info-success-gradient"></div></code></pre>
+          </div>
+        </div>
+      </section>
     </div>
-    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-     <div class="p-a-sm">
-      {% include "../../src/_includes/modules/gradient-radial.html" %}
-     </div>
+    <!--END TABS-->
+
+    <h2>Radial gradients</h2>
+    <!--TABS-->
+    <div class="tabs responsive">
+      <ul class="nav-tabs">
+        <li>
+          <a href="#section3">Example</a>
+        </li>
+        <li>
+          <a href="#section4">Source code</a>
+        </li>
+      </ul>
+
+      <!--Examples-->
+      <section id="section3" class="tab-pane">
+        <div class="card-header" id="heading-example2">
+          <a
+            data-bs-toggle="collapse"
+            href="#collapse-example2"
+            aria-expanded="true"
+            aria-controls="collapse-example2"
+            data-hash="#pane-example2"
+            title="Example tab header">
+            Example
+          </a>
+        </div>
+        <div
+          id="collapse-example2"
+          class="collapse show p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-example2">
+          <div class="p-a-sm">
+            {% include "../../src/_includes/modules/gradient-radial.html" %}
+          </div>
+        </div>
+      </section>
+
+      <!--HTML-->
+      <section id="section4" class="tab-pane">
+        <div class="card-header" id="heading-html2">
+          <a
+            class="collapsed"
+            data-bs-toggle="collapse"
+            href="#collapse-html2"
+            aria-expanded="false"
+            aria-controls="collapse-html2"
+            data-hash="#pane-html2"
+            title="HTML Source code tab header">
+            Source code
+          </a>
+        </div>
+        <div
+          id="collapse-html2"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-html2">
+          <div class="p-a-sm">
+            <h4>Gray</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
+
+            <h4>Grey Light</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
+
+            <h4>Primary</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-primary-radialgradient"></div></code></pre>
+
+            <h4>Highlight</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-highlight-radialgradient"></div></code></pre>
+
+            <h4>Standout</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-standout-radialgradient"></div></code></pre>
+
+            <h4>Secondary</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-secondary-radialgradient"></div></code></pre>
+
+            <h4>Secondary light</h4>
+            <pre
+              style="max-height: 300px;"><code><div class="container height-100 bg-secondarylight-radialgradient"></div></code></pre>
+          </div>
+        </div>
+      </section>
     </div>
-   </section>
-
-   <!--HTML-->
-   <section id="section4" class="tab-pane">
-    <div class="card-header" id="heading-html2">
-     <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-      aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-      Source code
-     </a>
-    </div>
-    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-     <div class="p-a-sm">
-      <h4>Gray</h4>
-      <pre style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
-
-      <h4>Grey Light</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
-
-      <h4>Primary</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-primary-radialgradient"></div></code></pre>
-
-      <h4>Highlight</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-highlight-radialgradient"></div></code></pre>
-
-      <h4>Standout</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-standout-radialgradient"></div></code></pre>
-
-      <h4>Secondary</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-secondary-radialgradient"></div></code></pre>
-
-      <h4>Secondary light</h4>
-      <pre
-       style="max-height: 300px;"><code><div class="container height-100 bg-secondarylight-radialgradient"></div></code></pre>
-     </div>
-    </div>
-   </section>
-
-
   </div>
-
-
- </div>
 </div>
