--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -4,79 +4,102 @@ landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
 ---
+
 <div class="row">
- <div class="col-md-3" role="complementary">
-  <!-- Side navigation -->
-  <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
-   <ul class="list-navigation">
-    <li>
-     <a class="landing back" href="/get-started/css-classes-shortcuts/" id="color-schemes-list">CSS classes
-      shortcuts</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">Utility CSS classes</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">Gradient backgrounds</a>
-    </li>
-    <li>
-     <a href="/get-started/css-classes-shortcuts/text-accent-colors.html" class="active">Text accent colors</a>
-    </li>
-    </li>
-   </ul>
-  </nav>
- </div>
+  <div class="col-md-3" role="complementary">
+    <!-- Side navigation -->
+    <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
+      <ul class="list-navigation">
+        <li>
+          <a
+            class="landing back"
+            href="/get-started/css-classes-shortcuts/"
+            id="color-schemes-list">
+            CSS classes shortcuts
+          </a>
+        </li>
+        <li>
+          <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">
+            Utility CSS classes
+          </a>
+        </li>
+        <li>
+          <a href="/get-started/css-classes-shortcuts/spacing.html">Spacing</a>
+        </li>
+        <li>
+          <a
+            href="/get-started/css-classes-shortcuts/gradient-backgrounds.html">
+            Gradient backgrounds
+          </a>
+        </li>
+        <li>
+          <a
+            href="/get-started/css-classes-shortcuts/text-accent-colors.html"
+            class="active">
+            Text accent colors
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
- <div class="col-md-9 p-b-lg">
-  <h1 class="mt-lg-0">Text accent colors</h1>
+  <div class="col-md-9 p-b-lg">
+    <h1 class="mt-lg-0">Text accent colors</h1>
 
-  <nav class="page-navigation"></nav>
+    <nav class="page-navigation"></nav>
 
-  <p>
-    Avoid changing text color, especially on regular content. If needed, you can change text color with these classes.
-    This may not have enough color contrast and may not be accessible. If you change the text color, check to make sure there
-    is enough <a href="https://accessibleweb.com/color-contrast-checker/">color contrast</a>.
-  </p>
+    <p>
+      Avoid changing text color, especially on regular content. If needed, you
+      can change text color with these classes. This may not have enough color
+      contrast and may not be accessible. If you change the text color, check to
+      make sure there is enough
+      <a href="https://accessibleweb.com/color-contrast-checker/">
+        color contrast
+      </a>
+      .
+    </p>
 
-  <h2>Text accent</h2>
+    <h2>Text accent</h2>
 
-  <p>Use these classes to add accent colors to a word or text portion.</p>
-  <pre style="max-height: 300px;"><code><p class="py-1 text-accent1">Accent Text 1</p></code></pre>
+    <p>Use these classes to add accent colors to a word or text portion.</p>
+    <pre
+      style="max-height: 300px;"><code><p class="py-1 text-accent1">Accent Text 1</p></code></pre>
 
-  <h3>Classes</h3>
-  <p class="py-1 text-accent1">.text-accent1</p>
-  <p class="py-1 text-accent2">.text-accent2</p>
-  <p class="py-1 text-accent3">.text-accent3</p>
-  <p class="py-1 text-accent4">.text-accent4</p>
-  <p class="py-1 text-accent5">.text-accent5</p>
-  <p class="py-1 text-accent6">.text-accent6</p>
-  <p class="py-1 text-accent7">.text-accent7</p>
-  <p class="py-1 text-accent8">.text-accent8</p>
-  <p class="py-1 text-accent9 bg-dark">.text-accent9 </p>
-  <p class="py-1 text-accent-p1 bg-dark">.text-accent-p1</p>
-  <p class="py-1 text-accent-p2">.text-accent-p2</p>
-  <p class="py-1 text-accent-p3">.text-accent-p3</p>
-  <p class="py-1 text-accent-s1 bg-dark">.text-accent-s1</p>
-  <p class="py-1 text-accent-s2 bg-dark">.text-accent-s2</p>
-  <p class="py-1 text-accent-s3 bg-dark">.text-accent-s3</p>
-  <p class="py-1 text-muted">.text-muted</p>
-  <p class="py-1 text-primary">.text-primary</p>
-  <p class="py-1 text-success">.text-success</p>
-  <p class="py-1 text-info">.text-info</p>
-  <p class="py-1 text-warning bg-dark">.text-warning</p>
-  <p class="py-1 text-danger">.text-danger</p>
+    <h3>Classes</h3>
+    <p class="py-1 text-accent1">.text-accent1</p>
+    <p class="py-1 text-accent2">.text-accent2</p>
+    <p class="py-1 text-accent3">.text-accent3</p>
+    <p class="py-1 text-accent4">.text-accent4</p>
+    <p class="py-1 text-accent5">.text-accent5</p>
+    <p class="py-1 text-accent6">.text-accent6</p>
+    <p class="py-1 text-accent7">.text-accent7</p>
+    <p class="py-1 text-accent8">.text-accent8</p>
+    <p class="py-1 text-accent9 bg-dark">.text-accent9</p>
+    <p class="py-1 text-accent-p1 bg-dark">.text-accent-p1</p>
+    <p class="py-1 text-accent-p2">.text-accent-p2</p>
+    <p class="py-1 text-accent-p3">.text-accent-p3</p>
+    <p class="py-1 text-accent-s1 bg-dark">.text-accent-s1</p>
+    <p class="py-1 text-accent-s2 bg-dark">.text-accent-s2</p>
+    <p class="py-1 text-accent-s3 bg-dark">.text-accent-s3</p>
+    <p class="py-1 text-muted">.text-muted</p>
+    <p class="py-1 text-primary">.text-primary</p>
+    <p class="py-1 text-success">.text-success</p>
+    <p class="py-1 text-info">.text-info</p>
+    <p class="py-1 text-warning bg-dark">.text-warning</p>
+    <p class="py-1 text-danger">.text-danger</p>
 
-  <h2>Text highlight</h2>
-  <p>Use this class to highlight a word or text portion.</p>
-  <pre style="max-height: 300px;"><code><span class="text-highlight">Highlighted text</span></code></pre>
-  <h3>Classes</h3>
-  <p><span class="py-1 text-highlight">.text-highlight</span></p>
-  <p><span class="py-1 text-highlight-primary">.text-highlight-primary</span></p>
-  <p><span class="py-1 text-highlight-warning">.text-highlight-warning</span></p>
-  <p><span class="py-1 text-highlight-dark">.text-highlight-dark</span></p>
-
- </div>
+    <h2>Text highlight</h2>
+    <p>Use this class to highlight a word or text portion.</p>
+    <pre
+      style="max-height: 300px;"><code><span class="text-highlight">Highlighted text</span></code></pre>
+    <h3>Classes</h3>
+    <p><span class="py-1 text-highlight">.text-highlight</span></p>
+    <p>
+      <span class="py-1 text-highlight-primary">.text-highlight-primary</span>
+    </p>
+    <p>
+      <span class="py-1 text-highlight-warning">.text-highlight-warning</span>
+    </p>
+    <p><span class="py-1 text-highlight-dark">.text-highlight-dark</span></p>
+  </div>
 </div>
