--- a/pages/sample/side-navigation-sample-level2.html
+++ b/pages/sample/side-navigation-sample-level2.html
@@ -6,89 +6,156 @@ permalink: "/components/side-navigation-sample-level2.html"
 ---
 
 <nav aria-label="Breadcrumb">
- <ol class="breadcrumb">
-  <li><a href="/components/side-navigation-sample.html" title="Home page">Home</a></li>
-  <li><a href="/components/side-navigation-sample.html" title="Examples landing page">Type of parties</a></li>
-  <li class="active">Birthday party</li>
- </ol>
+  <ol class="breadcrumb">
+    <li>
+      <a href="/components/side-navigation-sample.html" title="Home page">
+        Home
+      </a>
+    </li>
+    <li>
+      <a
+        href="/components/side-navigation-sample.html"
+        title="Examples landing page">
+        Type of parties
+      </a>
+    </li>
+    <li class="active">Birthday party</li>
+  </ol>
 </nav>
 
 <div class="row">
- <div class="col-lg-3">
-  <nav aria-label="list navigation">
-   <ul class="list-navigation">
-    <li><a href="/components/side-navigation-sample.html" class="landing back">Types of parties</a></li>
-    <li><a href="/components/side-navigation-sample-level2.html" class="active">Birthday</a>
-     <ul>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Picking a theme</a></li>
-      <li><a href="/components/side-navigation-sample-level3.html">Planning</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Day of the party</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">After the party</a></li>
-     </ul>
-    </li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Dance party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Holiday party</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">New year's eve</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Office party</a></li>
-   </ul>
-  </nav>
- </div>
- <div class="col-lg-9">
-  <h1 class="mt-lg-0">Birthday party</h1>
-
-
-  <p class="lead">In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit venenatis. Maecenas faucibus,
-   nulla at finibus dictum, felis dui vehicula enim, vitae aliquam lorem tortor non lacus.</p>
-  <h2>Birthday party topics</h2>
-
-  <div class="row">
-   <div class="col-lg-4">
-    <a href="javascript:;"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Picking a Theme" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Picking a Theme</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
-       libero ut.</p>
-     </div>
-    </a>
-   </div>
-   <div class="col-lg-4">
-    <a href="/components/side-navigation-sample-level3.html"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Planning">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Planning</h3>
-      <p class="font-size-16 color-black">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
-     </div>
-    </a>
-   </div>
-   <div class="col-lg-4">
-    <a href="javascript:;"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Day of the Party </h3>
-      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
-       ante ex.</p>
-     </div>
-    </a>
-   </div>
+  <div class="col-lg-3">
+    <nav aria-label="list navigation">
+      <ul class="list-navigation">
+        <li>
+          <a
+            href="/components/side-navigation-sample.html"
+            class="landing back">
+            Types of parties
+          </a>
+        </li>
+        <li>
+          <a
+            href="/components/side-navigation-sample-level2.html"
+            class="active">
+            Birthday
+          </a>
+          <ul>
+            <li>
+              <a href="javascript:;" class="gray-200" aria-disabled="true">
+                Picking a theme
+              </a>
+            </li>
+            <li>
+              <a href="/components/side-navigation-sample-level3.html">
+                Planning
+              </a>
+            </li>
+            <li>
+              <a href="javascript:;" class="gray-200" aria-disabled="true">
+                Day of the party
+              </a>
+            </li>
+            <li>
+              <a href="javascript:;" class="gray-200" aria-disabled="true">
+                After the party
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Dance party
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Holiday party
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            New year's eve
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Office party
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
+  <div class="col-lg-9">
+    <h1 class="mt-lg-0">Birthday party</h1>
 
-  <div class="row m-t">
+    <p class="lead">
+      In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
+      venenatis. Maecenas faucibus, nulla at finibus dictum, felis dui vehicula
+      enim, vitae aliquam lorem tortor non lacus.
+    </p>
+    <h2>Birthday party topics</h2>
 
-   <div class="col-lg-4">
-    <a href="javascript:;"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="New year’s eve" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">After the party</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Displays relevant information in a grid-like formation.</p>
-     </div>
-    </a>
-   </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <a
+          href="javascript:;"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
+          title="Picking a Theme"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Picking a Theme</h3>
+            <p class="font-size-16 gray-200" aria-disabled="true">
+              Curabitur vitae lacus neque. Curabitur faucibus venenatis libero
+              ut.
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a
+          href="/components/side-navigation-sample-level3.html"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+          title="Planning">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Planning</h3>
+            <p class="font-size-16 color-black">
+              Usce efficitur ultricies erat, commodo auctor mi tempus.
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a
+          href="javascript:;"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
+          title="Holiday party"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Day of the Party</h3>
+            <p class="font-size-16  gray-200" aria-disabled="true">
+              Ut luctus vulputate nulla in ullamcorper. Maecenas dictum ante ex.
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
 
+    <div class="row m-t">
+      <div class="col-lg-4">
+        <a
+          href="javascript:;"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
+          title="New year’s eve"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">After the party</h3>
+            <p class="font-size-16 gray-200" aria-disabled="true">
+              Displays relevant information in a grid-like formation.
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
   </div>
- </div>
 </div>
