--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -6,81 +6,156 @@ permalink: "/components/side-navigation-sample-level5.html"
 ---
 
 <nav aria-label="Breadcrumb">
- <ol class="breadcrumb">
-  <li><a href="/components/side-navigation-sample.html" title="Home page">Home</a></li>
-  <li><a href="/components/side-navigation-sample.html" title="Type of parties landing page">Type of parties</a></li>
-  <li><a href="/components/side-navigation-sample-level2.html" title="Birthday party landing page">Birthday party</a>
-  </li>
-  <li><a href="/components/side-navigation-sample-level3.html" title="Planning landing page">Planning</a>
-  </li>
-  <li><a href="/components/side-navigation-sample-level4.html" title="Food and drinks landing page">Food and drinks</a>
-  </li>
-  <li class="active">Dessert</li>
- </ol>
+  <ol class="breadcrumb">
+    <li>
+      <a href="/components/side-navigation-sample.html" title="Home page">
+        Home
+      </a>
+    </li>
+    <li>
+      <a
+        href="/components/side-navigation-sample.html"
+        title="Type of parties landing page">
+        Type of parties
+      </a>
+    </li>
+    <li>
+      <a
+        href="/components/side-navigation-sample-level2.html"
+        title="Birthday party landing page">
+        Birthday party
+      </a>
+    </li>
+    <li>
+      <a
+        href="/components/side-navigation-sample-level3.html"
+        title="Planning landing page">
+        Planning
+      </a>
+    </li>
+    <li>
+      <a
+        href="/components/side-navigation-sample-level4.html"
+        title="Food and drinks landing page">
+        Food and drinks
+      </a>
+    </li>
+    <li class="active">Dessert</li>
+  </ol>
 </nav>
 
 <div class="row">
- <div class="col-lg-3">
-  <nav aria-label="list navigation">
-   <ul class="list-navigation">
-    <li><a href="/components/side-navigation-sample-level4.html" class="landing back">Food and drinks</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Appetizers</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Main course</a></li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Side dishes</a></li>
-    <li><a href="/components/side-navigation-sample-level5.html" class="active">Dessert</a>
-     <ul>
-      <li><a href="/components/side-navigation-sample-level6.html">Birthday cake</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Ice cream</a></li>
-      <li><a href="javascript:;" class="gray-200" aria-disabled="true">Other treats</a></li>
-     </ul>
-    </li>
-    <li><a href="javascript:;" class="gray-200" aria-disabled="true">Drinks</a></li>
-   </ul>
-  </nav>
- </div>
- <div class="col-lg-9">
-  <h1 class="mt-lg-0">Dessert</h1>
-
-
-  <p class="lead">In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit venenatis. Maecenas faucibus,
-   nulla at finibus dictum, felis dui vehicula enim, vitae aliquam lorem tortor non lacus.</p>
-  <h2>Categories</h2>
-
-  <div class="row">
-   <div class="col-lg-4">
-    <a href="/components/side-navigation-sample-level6.html"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
-     title="Planning" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Birthday cake</h3>
-      <p class="font-size-16 color-black">Usce efficitur ultricies erat, commodo auctor mi tempus.</p>
-     </div>
-    </a>
-   </div>
-   <div class="col-lg-4">
-    <a href="javascript:;"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
-     title="Guest list" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Ice cream</h3>
-      <p class="font-size-16 gray-200" aria-disabled="true">Curabitur vitae lacus neque. Curabitur faucibus venenatis
-       libero ut.</p>
-     </div>
-    </a>
-   </div>
-   <div class="col-lg-4">
-    <a href="javascript:;"
-     class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
-     title="Holiday party" aria-disabled="true">
-     <div class="p-a">
-      <h3 class="h5 m-t-0">Other treats</h3>
-      <p class="font-size-16  gray-200" aria-disabled="true">Ut luctus vulputate nulla in ullamcorper. Maecenas dictum
-       ante ex.</p>
-     </div>
-    </a>
-   </div>
+  <div class="col-lg-3">
+    <nav aria-label="list navigation">
+      <ul class="list-navigation">
+        <li>
+          <a
+            href="/components/side-navigation-sample-level4.html"
+            class="landing back">
+            Food and drinks
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Appetizers
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Main course
+          </a>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Side dishes
+          </a>
+        </li>
+        <li>
+          <a
+            href="/components/side-navigation-sample-level5.html"
+            class="active">
+            Dessert
+          </a>
+          <ul>
+            <li>
+              <a href="/components/side-navigation-sample-level6.html">
+                Birthday cake
+              </a>
+            </li>
+            <li>
+              <a href="javascript:;" class="gray-200" aria-disabled="true">
+                Ice cream
+              </a>
+            </li>
+            <li>
+              <a href="javascript:;" class="gray-200" aria-disabled="true">
+                Other treats
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="javascript:;" class="gray-200" aria-disabled="true">
+            Drinks
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
+  <div class="col-lg-9">
+    <h1 class="mt-lg-0">Dessert</h1>
 
+    <p class="lead">
+      In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
+      venenatis. Maecenas faucibus, nulla at finibus dictum, felis dui vehicula
+      enim, vitae aliquam lorem tortor non lacus.
+    </p>
+    <h2>Categories</h2>
 
- </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <a
+          href="/components/side-navigation-sample-level6.html"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+          title="Planning"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Birthday cake</h3>
+            <p class="font-size-16 color-black">
+              Usce efficitur ultricies erat, commodo auctor mi tempus.
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a
+          href="javascript:;"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover gray-200"
+          title="Guest list"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Ice cream</h3>
+            <p class="font-size-16 gray-200" aria-disabled="true">
+              Curabitur vitae lacus neque. Curabitur faucibus venenatis libero
+              ut.
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a
+          href="javascript:;"
+          class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover  gray-200"
+          title="Holiday party"
+          aria-disabled="true">
+          <div class="p-a">
+            <h3 class="h5 m-t-0">Other treats</h3>
+            <p class="font-size-16  gray-200" aria-disabled="true">
+              Ut luctus vulputate nulla in ullamcorper. Maecenas dictum ante ex.
+            </p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
