--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -5,127 +5,182 @@ layout: components.njk
 permalink: "components/alert.html"
 ---
 
-
-
 <h1 class="mt-lg-0">Alert</h1>
 <nav class="page-navigation"></nav>
 
-<p>The alert is for important, sometimes time-sensitive
- information. Reserve alerts for information the audience must read before anything else.</p>
-<p>The alert is a band that extends across the width of the <a href="/structure/utility-header.html">utility
-  header</a>. </p>
+<p>
+  The alert is for important, sometimes time-sensitive information. Reserve
+  alerts for information the audience must read before anything else.
+</p>
+<p>
+  The alert is a band that extends across the width of the
+  <a href="/structure/utility-header.html">utility header</a>
+  .
+</p>
 <p>It includes:</p>
 <ul>
- <li>An optional icon, selected from a list of font icon options</li>
- <li>A text field, which includes the ability to link to other pages</li>
- <li>An “X” close icon that allows people to dismiss the alert</li>
- <li>Your theme's standout color as the background color</li>
+  <li>An optional icon, selected from a list of font icon options</li>
+  <li>A text field, which includes the ability to link to other pages</li>
+  <li>An “X” close icon that allows people to dismiss the alert</li>
+  <li>Your theme's standout color as the background color</li>
 </ul>
 
 <h2>Sample</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
-  <li>
-   <a href="#section3">Eleventy include</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+    <li>
+      <a href="#section3">Eleventy include</a>
+    </li>
+  </ul>
 
-
-
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm p-b-lg">
-
-
-    <h3 class="h4 m-t-0">Info</h3>
-    <div class="alert alert-dismissible alert-banner" role="alert">
-     <div class="container">
-      <img src="/images/alert-info.svg" alt="alert info icon">
-      <span class="alert-text" id="info-alert-example"><span class="text-bold">New!</span> A new version of the State Web Template has
-       launched. <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
-       <a href="javascript:;" aria-labelledby="info-alert-example">Upgrade now</a></span>
-      <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
-        class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-
-     </div>
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
     </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm p-b-lg">
+        <h3 class="h4 m-t-0">Info</h3>
+        <div class="alert alert-dismissible alert-banner" role="alert">
+          <div class="container">
+            <img src="/images/alert-info.svg" alt="alert info icon" />
+            <span class="alert-text" id="info-alert-example">
+              <span class="text-bold">New!</span>
+              A new version of the State Web Template has launched.
+              <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
+              <a href="javascript:;" aria-labelledby="info-alert-example">
+                Upgrade now
+              </a>
+            </span>
+            <button
+              type="button"
+              class="close ms-lg-auto"
+              data-bs-dismiss="alert"
+              aria-label="Close">
+              <span class="ca-gov-icon-close-mark" aria-hidden="true"></span>
+            </button>
+          </div>
+        </div>
 
-    <h3 class="h4">Warning</h3>
-    <div class="alert alert-dismissible alert-banner" role="alert">
-     <div class="container">
-      <span class="alert-icon ca-gov-icon-warning-triangle text-warning" aria-hidden="true"></span>
-      <span class="alert-text" id="warning-alert-example"><span class="text-bold">Warning:</span> Our website may be impacted during upgrade.
-       <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
+        <h3 class="h4">Warning</h3>
+        <div class="alert alert-dismissible alert-banner" role="alert">
+          <div class="container">
+            <span
+              class="alert-icon ca-gov-icon-warning-triangle text-warning"
+              aria-hidden="true"></span>
+            <span class="alert-text" id="warning-alert-example">
+              <span class="text-bold">Warning:</span>
+              Our website may be impacted during upgrade.
+              <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
 
-       <a href="javascript:;" aria-labelledby="warning-alert-example">Learn more <span class="sr-only">about the impact</span></a></span>
-      <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
-        class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-     </div>
+              <a href="javascript:;" aria-labelledby="warning-alert-example">
+                Learn more
+                <span class="sr-only">about the impact</span>
+              </a>
+            </span>
+            <button
+              type="button"
+              class="close ms-lg-auto"
+              data-bs-dismiss="alert"
+              aria-label="Close">
+              <span class="ca-gov-icon-close-mark" aria-hidden="true"></span>
+            </button>
+          </div>
+        </div>
+
+        <h3 class="h4">Danger</h3>
+        <div class="alert alert-dismissible alert-banner" role="alert">
+          <div class="container">
+            <img
+              src="/images/alert-warning-diamond.svg"
+              alt="alert warning icon" />
+            <span class="alert-text" id="danger-alert-example">
+              <span class="text-bold">Alert:</span>
+              Our systems are currently down.
+              <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
+              <a href="javascript:;" aria-labelledby="danger-alert-example">
+                Learn more
+                <span class="sr-only">about the incident</span>
+              </a>
+            </span>
+            <button
+              type="button"
+              class="close ms-lg-auto"
+              data-bs-dismiss="alert"
+              aria-label="Close">
+              <span class="ca-gov-icon-close-mark" aria-hidden="true"></span>
+            </button>
+          </div>
+        </div>
+
+        <h3 class="h4">Resolution</h3>
+        <div class="alert alert-dismissible alert-banner" role="alert">
+          <div class="container">
+            <img src="/images/alert-success.svg" alt="alert success icon" />
+            <span class="alert-text" id="resolution-alert-example">
+              <span class="text-bold">Fixed.</span>
+              Our systems are back up again.
+              <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
+              <a href="javascript:;" aria-labelledby="resolution-alert-example">
+                Learn more
+                <span class="sr-only">about the resolution</span>
+              </a>
+            </span>
+            <button
+              type="button"
+              class="close ms-lg-auto"
+              data-bs-dismiss="alert"
+              aria-label="Close">
+              <span class="ca-gov-icon-close-mark" aria-hidden="true"></span>
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
 
-
-
-    <h3 class="h4">Danger</h3>
-    <div class="alert alert-dismissible alert-banner" role="alert">
-     <div class="container">
-      <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
-      <span class="alert-text" id="danger-alert-example"><span class="text-bold">Alert:</span> Our systems are currently down. <span
-        class="ca-gov-icon-pipe" aria-hidden="true"></span>
-       <a href="javascript:;" aria-labelledby="danger-alert-example">Learn more <span class="sr-only">about the incident</span></a></span>
-      <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
-        class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-     </div>
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
     </div>
-
-    <h3 class="h4">Resolution</h3>
-    <div class="alert alert-dismissible alert-banner" role="alert">
-     <div class="container">
-      <img src="/images/alert-success.svg" alt="alert success icon">
-      <span class="alert-text" id="resolution-alert-example"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
-        class="ca-gov-icon-pipe" aria-hidden="true"></span>
-       <a href="javascript:;" aria-labelledby="resolution-alert-example">Learn more <span class="sr-only">about the resolution</span></a></span>
-      <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
-        class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-     </div>
-    </div>
-
-
-
-
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-
-    <h3 class="h4 m-t-0">Info</h3>
-    <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">Info</h3>
+        <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-info.svg" alt="alert info icon">
    <span class="alert-text"><span class="text-bold">New!</span> A new version of the State Web Template has
@@ -137,10 +192,8 @@ permalink: "components/alert.html"
  </div>
      </code></pre>
 
-
-
-    <h3 class="h4">Warning</h3>
-    <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
+        <h3 class="h4">Warning</h3>
+        <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
 <div class="container">
  <span class="alert-icon ca-gov-icon-warning-triangle text-warning" aria-hidden="true"></span>
  <span class="alert-text"><span class="text-bold">Warning:</span> Our website may be impacted during upgrade.
@@ -151,12 +204,8 @@ permalink: "components/alert.html"
 </div>
 </div></code></pre>
 
-
-
-
-
-    <h3 class="h4">Danger</h3>
-    <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
+        <h3 class="h4">Danger</h3>
+        <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
    <span class="alert-text"><span class="text-bold">Alert:</span> Our systems are currently down. <span
@@ -168,10 +217,8 @@ permalink: "components/alert.html"
  </div>
      </code></pre>
 
-
-
-    <h3 class="h4">Resolution</h3>
-    <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
+        <h3 class="h4">Resolution</h3>
+        <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
    <img src="/images/alert-success.svg" alt="alert success icon">
    <span class="alert-text"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
@@ -182,38 +229,47 @@ permalink: "components/alert.html"
   </div>
  </div>
      </code></pre>
+      </div>
+    </div>
+  </section>
 
-
-   </div>
-  </div>
- </section>
-
-
- <!--NJK-->
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-njk1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-njk1" aria-expanded="false"
-    aria-controls="collapse-njk1" data-hash="#pane-njk1" title="Eleventy include tab header">
-    Eleventy include
-   </a>
-  </div>
-  <div id="collapse-njk1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-njk1">
-   <div class="p-a-sm">
-    Add the alert key with the path to your alert html file
-    <code>alert: " ../modules/alert-banner.html"</code>
-    after your
-    eleventy layout key
-    declaration in
-    the front matter data on your page.
-    <pre>---
+  <!--NJK-->
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-njk1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-njk1"
+        aria-expanded="false"
+        aria-controls="collapse-njk1"
+        data-hash="#pane-njk1"
+        title="Eleventy include tab header">
+        Eleventy include
+      </a>
+    </div>
+    <div
+      id="collapse-njk1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-njk1">
+      <div class="p-a-sm">
+        Add the alert key with the path to your alert html file
+        <code>alert: " ../modules/alert-banner.html"</code>
+        after your eleventy layout key declaration in the front matter data on
+        your page.
+        <pre>
+---
 title: Alert Banner
 layout: page.njk
 alert: "../modules/alert-banner.html"
----</pre>
+---</pre
+        >
 
-
-    <p>Or include alert banner module into your page directly after skip-to-content component:</p>
-    <pre>
+        <p>
+          Or include alert banner module into your page directly after
+          skip-to-content component:
+        </p>
+        <pre>
  &lt;header role="banner" id="header" class="global-header"&gt;
    &lt;div id="skip-to-content"&gt;
        &lt;a href="#main-content"&gt;Skip to Main Content&lt;/a&gt;
@@ -223,43 +279,45 @@ alert: "../modules/alert-banner.html"
    ...
  &lt;/header&gt;
  </pre>
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
-
-
-
 <h2>Usage</h2>
 <h3>When and how to use it</h3>
-<p>Use the alert sparingly. They alarm people and distract from other content.</p>
-<p>Be concise with your alert content. Use a link to send people to a page with the details.</p>
-<p>Only use one alert on a page. Make sure the alert is relevant to the page it is on. Only duplicate the alert on
- other
- pages if it applies to those pages.</p>
+<p>
+  Use the alert sparingly. They alarm people and distract from other content.
+</p>
+<p>
+  Be concise with your alert content. Use a link to send people to a page with
+  the details.
+</p>
+<p>
+  Only use one alert on a page. Make sure the alert is relevant to the page it
+  is on. Only duplicate the alert on other pages if it applies to those pages.
+</p>
 <p>Use alerts to tell people about:</p>
 <ul>
- <li>Open application periods (informational)</li>
- <li>Planned maintenance (informational)</li>
- <li>Approaching deadlines (warning)</li>
- <li>Services that are down (danger)</li>
- <li>Positive feedback (success)</li>
+  <li>Open application periods (informational)</li>
+  <li>Planned maintenance (informational)</li>
+  <li>Approaching deadlines (warning)</li>
+  <li>Services that are down (danger)</li>
+  <li>Positive feedback (success)</li>
 </ul>
 <p>Choose an icon that supports the tone of your alert.</p>
 
-
 <h3>How not to use it</h3>
-<p>Do not put an alert on every page on your site. If people see alerts too often, they will start to ignore them and
- not read the content.
+<p>
+  Do not put an alert on every page on your site. If people see alerts too
+  often, they will start to ignore them and not read the content.
 </p>
 <p>Do not put more than one alert on a page.</p>
-<p>Do not use alerts to simply highlight important content. They are for information that is new, relevant, and
- temporary.</p>
-
+<p>
+  Do not use alerts to simply highlight important content. They are for
+  information that is new, relevant, and temporary.
+</p>
 
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
