--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -5,172 +5,213 @@ layout: patterns.njk
 permalink: "patterns/banner.html"
 ---
 
-
 <h1 class="mt-lg-0">Banner</h1>
 
 <nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul>
-  <li><a href="#Full-span-banner">Full span banner</a></li>
-  <li><a href="#Feature-banner">Feature banner</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
+  <div id="page-navigation-label" class="label">On this page</div>
+  <ul>
+    <li><a href="#Full-span-banner">Full span banner</a></li>
+    <li><a href="#Feature-banner">Feature banner</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+  </ul>
 </nav>
 
-<p>The banner is the first thing a visitor sees on the homepage of a website. It often spans the full width
- of the screen or the main content area.</p>
+<p>
+  The banner is the first thing a visitor sees on the homepage of a website. It
+  often spans the full width of the screen or the main content area.
+</p>
 <p>It usually includes a(an):</p>
 <ul>
- <li>Title</li>
- <li>Brief description</li>
- <li>Image or visual graphic</li>
- <li>Optional image caption</li>
- <li>Button</li>
+  <li>Title</li>
+  <li>Brief description</li>
+  <li>Image or visual graphic</li>
+  <li>Optional image caption</li>
+  <li>Button</li>
 </ul>
 
-
-<p>A banner displays an action you want people to take or highlights the most important information on a page. </p>
+<p>
+  A banner displays an action you want people to take or highlights the most
+  important information on a page.
+</p>
 
 <h2 id="Full-span-banner">Full span banner</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/banner.html" %}
+        <p class="m-t m-b-0 font-size-16">Minimum width: 1600px</p>
+      </div>
+    </div>
+  </section>
 
-    {% include "../../src/_includes/modules/banner.html" %}
-    <p class="m-t m-b-0 font-size-16">Minimum width: 1600px</p>
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/banner.html" %}</code>
+  <!--HTML-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/banner.html" %}</code>
     </pre>
-
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
-
-
-
-
 <h2 id="Feature-banner">Feature banner</h2>
-<p>The feature banner spans the full width of the content area on desktop and full width of the screen on mobile. On
- mobile, the feature card will stack in this order:</p>
+<p>
+  The feature banner spans the full width of the content area on desktop and
+  full width of the screen on mobile. On mobile, the feature card will stack in
+  this order:
+</p>
 <ul>
- <li>Image</li>
- <li>Image caption</li>
- <li>Title</li>
- <li>Description</li>
- <li>Button</li>
+  <li>Image</li>
+  <li>Image caption</li>
+  <li>Title</li>
+  <li>Description</li>
+  <li>Button</li>
 </ul>
 
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section3">Example</a>
-  </li>
-  <li>
-   <a href="#section4">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section3">Example</a>
+    </li>
+    <li>
+      <a href="#section4">Source code</a>
+    </li>
+  </ul>
 
- <!--Examples-->
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-example3">
-   <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-    data-hash="#pane-example3" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
-   <div class="p-a-sm p-b">
+  <!--Examples-->
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-example3">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
+      <div class="p-a-sm p-b">
+        {% include "../../src/_includes/modules/feature-card.html" %}
+        <p class="m-t m-b-0 font-size-16">Maximum width: 1176px</p>
+      </div>
+    </div>
+  </section>
 
-    {% include "../../src/_includes/modules/feature-card.html" %}
-    <p class="m-t m-b-0 font-size-16">Maximum width: 1176px</p>
-
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section4" class="tab-pane">
-  <div class="card-header" id="heading-html3">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-    aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/feature-card.html" %}</code>
+  <!--HTML-->
+  <section id="section4" class="tab-pane">
+    <div class="card-header" id="heading-html3">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/feature-card.html" %}</code>
    </pre>
-
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2 id="Usage">Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
-<p>Use the hero banner to catch visitors' attention and highlight the top task or need.</p>
-<p>Place it at the top of the homepage so it appears below the statewide header, site header, and site navigation. Learn
- more in our guidance on <a href="/structure.html">Webpage structure</a>.</p>
-<p>Include a concise title, description, image, and at least one button. Choose an image that’s in harmony with your
- brand identity, mission, and tone. The minimum image size is 776 x 517 pixels. For best results, use images with this
- aspect ratio.
+<p>
+  Use the hero banner to catch visitors' attention and highlight the top task or
+  need.
 </p>
-
+<p>
+  Place it at the top of the homepage so it appears below the statewide header,
+  site header, and site navigation. Learn more in our guidance on
+  <a href="/structure.html">Webpage structure</a>
+  .
+</p>
+<p>
+  Include a concise title, description, image, and at least one button. Choose
+  an image that’s in harmony with your brand identity, mission, and tone. The
+  minimum image size is 776 x 517 pixels. For best results, use images with this
+  aspect ratio.
+</p>
 
 <h3>How not to use it</h3>
 
 <p>Do not use more than one hero banner on your homepage.</p>
 <p>Do not use more than one primary call-to-action within your hero banner.</p>
-<p>Do not use the hero banner to make an image carousel. Carousels frustrate people more than they help them and do not
- meet accessibility standards.</p>
-<p>Do not put a lot of content in your hero banner. Too much content is hard to read. It will also lengthen the hero
- banner and cause awkward whitespace.</p>
+<p>
+  Do not use the hero banner to make an image carousel. Carousels frustrate
+  people more than they help them and do not meet accessibility standards.
+</p>
+<p>
+  Do not put a lot of content in your hero banner. Too much content is hard to
+  read. It will also lengthen the hero banner and cause awkward whitespace.
+</p>
 <p>Do not use busy images or graphics behind content.</p>
 
 <h2 id="Accessibility">Accessibility</h2>
