--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -5,259 +5,302 @@ layout: components.njk
 permalink: "components/blockquote.html"
 ---
 
-<style>
-
-</style>
+<style></style>
 
 <h1 class="mt-lg-0">Blockquote</h1>
 <nav class="page-navigation"></nav>
 
 <p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
-<p>Blockquote text is styled differently from the main text and is typically used for important quotations.
+<p>
+  Blockquote text is styled differently from the main text and is typically used
+  for important quotations.
 </p>
 
 <h2>Basic blockquote</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">With graphic</h3>
-    {% include "../../src/_includes/modules/blockquote.html" %}
-    <h3 class="h4">Without graphic</h3>
-    {% include "../../src/_includes/modules/blockquote-no-graphic.html" %}
-   </div>
-  </div>
- </section>
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">With graphic</h3>
+        {% include "../../src/_includes/modules/blockquote.html" %}
+        <h3 class="h4">Without graphic</h3>
+        {% include "../../src/_includes/modules/blockquote-no-graphic.html" %}
+      </div>
+    </div>
+  </section>
 
-
-
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">With graphic</h3>
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote.html" %}</code>
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">With graphic</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote.html" %}</code>
     </pre>
-    <h3 class="h4">Without graphic</h3>
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-no-graphic.html" %}</code>
+        <h3 class="h4">Without graphic</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-no-graphic.html" %}</code>
    </pre>
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
-
-
 
 <h2>Blockquote with image</h2>
 
-
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section3">Example</a>
-  </li>
-  <li>
-   <a href="#section4">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section3">Example</a>
+    </li>
+    <li>
+      <a href="#section4">Source code</a>
+    </li>
+  </ul>
 
+  <!--Examples-->
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-example4">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example4"
+        aria-expanded="true"
+        aria-controls="collapse-example4"
+        data-hash="#pane-example4"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example4"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example4">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/blockquote-with-image.html" %}
+      </div>
+    </div>
+  </section>
 
-
- <!--Examples-->
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-example4">
-   <a data-bs-toggle="collapse" href="#collapse-example4" aria-expanded="true" aria-controls="collapse-example4"
-    data-hash="#pane-example4" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example4" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example4">
-   <div class="p-a-sm">
-
-
-    {% include "../../src/_includes/modules/blockquote-with-image.html" %}
-
-
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section4" class="tab-pane">
-  <div class="card-header" id="heading-html4">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" aria-expanded="false"
-    aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html4" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html4">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-with-image.html" %}</code>
+  <!--HTML-->
+  <section id="section4" class="tab-pane">
+    <div class="card-header" id="heading-html4">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html4"
+        aria-expanded="false"
+        aria-controls="collapse-html4"
+        data-hash="#pane-html4"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html4"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html4">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-with-image.html" %}</code>
    </pre>
-
-   </div>
-  </div>
- </section>
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
-
-
-
-
 
 <h2>Pull quote</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section5">Example</a>
-  </li>
-  <li>
-   <a href="#section6">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section5">Example</a>
+    </li>
+    <li>
+      <a href="#section6">Source code</a>
+    </li>
+  </ul>
 
+  <!--Examples-->
+  <section id="section5" class="tab-pane">
+    <div class="card-header" id="heading-example2">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example2"
+        aria-expanded="true"
+        aria-controls="collapse-example2"
+        data-hash="#pane-example2"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example2"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example2">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/blockquote-pull.html" %}
+      </div>
+    </div>
+  </section>
 
- <!--Examples-->
- <section id="section5" class="tab-pane">
-  <div class="card-header" id="heading-example2">
-   <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-    data-hash="#pane-example2" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-   <div class="p-a-sm">
-
-
-    {% include "../../src/_includes/modules/blockquote-pull.html" %}
-
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section6" class="tab-pane">
-  <div class="card-header" id="heading-html2">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-    aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-pull.html" %}</code>
+  <!--HTML-->
+  <section id="section6" class="tab-pane">
+    <div class="card-header" id="heading-html2">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-pull.html" %}</code>
     </pre>
-   </div>
-  </div>
- </section>
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
-
-
 
 <h2>Prominent blockquote</h2>
 
-
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section7">Example</a>
-  </li>
-  <li>
-   <a href="#section8">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section7">Example</a>
+    </li>
+    <li>
+      <a href="#section8">Source code</a>
+    </li>
+  </ul>
 
+  <!--Examples-->
+  <section id="section7" class="tab-pane">
+    <div class="card-header" id="heading-example3">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/blockquote-prominent.html" %}
+      </div>
+    </div>
+  </section>
 
-
- <!--Examples-->
- <section id="section7" class="tab-pane">
-  <div class="card-header" id="heading-example3">
-   <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-    data-hash="#pane-example3" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
-   <div class="p-a-sm">
-    {% include "../../src/_includes/modules/blockquote-prominent.html" %}
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section8" class="tab-pane">
-  <div class="card-header" id="heading-html3">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-    aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-prominent.html" %}</code>
+  <!--HTML-->
+  <section id="section8" class="tab-pane">
+    <div class="card-header" id="heading-html3">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/blockquote-prominent.html" %}</code>
    </pre>
-
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
-
 
 <h2>Usage</h2>
 
 <h3 class="m-t">When and how to use it</h3>
 <p>Use blockquotes to display a quote from a person or a source.</p>
-<p>List the speaker or author of the quote with their relevant title. </p>
-
-
+<p>List the speaker or author of the quote with their relevant title.</p>
 
 <h3>How not to use it</h3>
 
-<p>Do not use more than one block quote variation on a single page. </p>
-<p>Avoid hyperlinks inside the blockquote. Use the body content to link to additional information from the speaker.</p>
+<p>Do not use more than one block quote variation on a single page.</p>
+<p>
+  Avoid hyperlinks inside the blockquote. Use the body content to link to
+  additional information from the speaker.
+</p>
 
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
