--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -5,125 +5,198 @@ layout: components.njk
 permalink: "components/countdown-timer.html"
 ---
 
-
-
 <h1 class="mt-lg-0">Countdown timer</h1>
 
 <nav class="page-navigation"></nav>
 
-<p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in
- time. </p>
+<p>
+  The countdown timer component helps visitors visualize the counting toward or
+  away from a fixed point in time.
+</p>
 <p>Time intervals displayed by the countdown timer can include:</p>
 <ul>
- <li>Weeks</li>
- <li>Days</li>
- <li>Hours</li>
- <li>Minutes</li>
- <li>Seconds</li>
+  <li>Weeks</li>
+  <li>Days</li>
+  <li>Hours</li>
+  <li>Minutes</li>
+  <li>Seconds</li>
 </ul>
-
 
 <h2>Sample</h2>
 
-
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
-
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
-    <h3 class="m-t-0">Default</h3>
-    <div class="group countdown p-x">
-     <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="weeks" aria-label="weeks"
-        class="text-decoration-none">wks</abbr><br></span>
-      <span id="weeks1"></span>
-     </div>
-     <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-      <span class="countdown-text">days<br></span>
-      <span id="days1"></span>
-     </div>
-     <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="hours" aria-label="hours" class="text-decoration-none">hrs</abbr>
-       <br></span>
-      <span id="hours1"></span>
-     </div>
-     <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="minutes" aria-label="minutes"
-        class="text-decoration-none">mins</abbr><br></span>
-      <span id="minutes1"></span>
-     </div>
-     <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="seconds" aria-label="seconds"
-        class="text-decoration-none">secs</abbr><br></span>
-      <span id="seconds1"></span>
-     </div>
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
     </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm">
+        <h3 class="m-t-0">Default</h3>
+        <div class="group countdown p-x">
+          <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="weeks"
+                aria-label="weeks"
+                class="text-decoration-none">
+                wks
+              </abbr>
+              <br />
+            </span>
+            <span id="weeks1"></span>
+          </div>
+          <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              days
+              <br />
+            </span>
+            <span id="days1"></span>
+          </div>
+          <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="hours"
+                aria-label="hours"
+                class="text-decoration-none">
+                hrs
+              </abbr>
+              <br />
+            </span>
+            <span id="hours1"></span>
+          </div>
+          <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="minutes"
+                aria-label="minutes"
+                class="text-decoration-none">
+                mins
+              </abbr>
+              <br />
+            </span>
+            <span id="minutes1"></span>
+          </div>
+          <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="seconds"
+                aria-label="seconds"
+                class="text-decoration-none">
+                secs
+              </abbr>
+              <br />
+            </span>
+            <span id="seconds1"></span>
+          </div>
+        </div>
 
-
-    <h3>Primary</h3>
-    <div class="group countdown p-x">
-     <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="weeks" aria-label="weeks"
-        class="text-decoration-none">wks</abbr><br></span>
-      <span id="weeks"></span>
-     </div>
-     <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-      <span class="countdown-text">days<br></span>
-      <span id="days"></span>
-     </div>
-     <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="hours" aria-label="hours"
-        class="text-decoration-none">hrs</abbr><br></span>
-      <span id="hours"></span>
-     </div>
-     <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="minutes" aria-label="minutes"
-        class="text-decoration-none">mins</abbr><br></span>
-      <span id="minutes"></span>
-     </div>
-     <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
-      <span class="countdown-text"><abbr title="seconds" aria-label="seconds"
-        class="text-decoration-none">secs</abbr><br></span>
-      <span id="seconds"></span>
-     </div>
+        <h3>Primary</h3>
+        <div class="group countdown p-x">
+          <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="weeks"
+                aria-label="weeks"
+                class="text-decoration-none">
+                wks
+              </abbr>
+              <br />
+            </span>
+            <span id="weeks"></span>
+          </div>
+          <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              days
+              <br />
+            </span>
+            <span id="days"></span>
+          </div>
+          <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="hours"
+                aria-label="hours"
+                class="text-decoration-none">
+                hrs
+              </abbr>
+              <br />
+            </span>
+            <span id="hours"></span>
+          </div>
+          <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="minutes"
+                aria-label="minutes"
+                class="text-decoration-none">
+                mins
+              </abbr>
+              <br />
+            </span>
+            <span id="minutes"></span>
+          </div>
+          <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
+            <span class="countdown-text">
+              <abbr
+                title="seconds"
+                aria-label="seconds"
+                class="text-decoration-none">
+                secs
+              </abbr>
+              <br />
+            </span>
+            <span id="seconds"></span>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
 
-
-   </div>
-  </div>
- </section>
-
-
-
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <h3 class="m-t-0">Default</h3>
-    <pre style="max-height: 300px;"><code><!--HTML-->
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <h3 class="m-t-0">Default</h3>
+        <pre style="max-height: 300px;"><code><!--HTML-->
       <div class="group countdown p-x">
        <div class="fifth bg-gray-100 text-center p-b-md p-l-0 p-r-0">
         <span class="countdown-text"><abbr title="weeks" aria-label="weeks" class="text-decoration-none">wks</abbr><br></span>
@@ -185,9 +258,8 @@ permalink: "components/countdown-timer.html"
           </code>
          </pre>
 
-
-    <h3>Primary</h3>
-    <pre style="max-height: 300px;"><code><!--HTML-->
+        <h3>Primary</h3>
+        <pre style="max-height: 300px;"><code><!--HTML-->
       <div class="group countdown p-x">
        <div class="fifth text-center section-primary p-b-md p-l-0 p-r-0">
         <span class="countdown-text"><abbr title="weeks" aria-label="weeks" class="text-decoration-none">wks</abbr><br></span>
@@ -248,78 +320,77 @@ permalink: "components/countdown-timer.html"
         </script>
           </code>
         </pre>
-   </div>
-  </div>
- </section>
-
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
-
-
-
-
-
 
 <h2>Usage</h2>
 
 <h3>When and how to use it</h3>
-<p>Use the countdown timer to emphasize important events. These events might include:</p>
+<p>
+  Use the countdown timer to emphasize important events. These events might
+  include:
+</p>
 
 <ul>
- <li>Release dates</li>
- <li>Application openings and/or deadlines</li>
- <li>The launch of new products or services</li>
+  <li>Release dates</li>
+  <li>Application openings and/or deadlines</li>
+  <li>The launch of new products or services</li>
 </ul>
-
-
 
 <h3>How not to use it</h3>
 
-<p>Try not to use months in your countdown as they present a fluctuating metric of time.</p>
-<p>Avoid excessive timeframes (more than 1 year) as this renders the countdown useless to visitors.</p>
+<p>
+  Try not to use months in your countdown as they present a fluctuating metric
+  of time.
+</p>
+<p>
+  Avoid excessive timeframes (more than 1 year) as this renders the countdown
+  useless to visitors.
+</p>
 
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
 
-
 <script>
- // Set the date we're counting down to
- var countDownDate = new Date("Jan 1, 2024 00:00:00").getTime();
+  // Set the date we're counting down to
+  var countDownDate = new Date("Jan 1, 2024 00:00:00").getTime();
 
- // Update the count down every 1 second
- var x = setInterval(function () {
+  // Update the count down every 1 second
+  var x = setInterval(function () {
 
-  // Get todays date and time
-  var now = new Date().getTime();
+   // Get todays date and time
+   var now = new Date().getTime();
 
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
+   // Find the distance between now an the count down date
+   var distance = countDownDate - now;
 
-  // Time calculations for days, hours, minutes and seconds
-  var weeks = Math.floor(distance / (1000 * 60 * 60 * 24 * 7));
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+   // Time calculations for days, hours, minutes and seconds
+   var weeks = Math.floor(distance / (1000 * 60 * 60 * 24 * 7));
+   var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-  // Output the result in the elements with id="days", id="hours" etc.
+   // Output the result in the elements with id="days", id="hours" etc.
 
-  document.getElementById("weeks").innerHTML = weeks;
-  document.getElementById("days").innerHTML = days;
-  document.getElementById("hours").innerHTML = hours;
-  document.getElementById("minutes").innerHTML = minutes;
-  document.getElementById("seconds").innerHTML = seconds;
+   document.getElementById("weeks").innerHTML = weeks;
+   document.getElementById("days").innerHTML = days;
+   document.getElementById("hours").innerHTML = hours;
+   document.getElementById("minutes").innerHTML = minutes;
+   document.getElementById("seconds").innerHTML = seconds;
 
-  document.getElementById("weeks1").innerHTML = weeks;
-  document.getElementById("days1").innerHTML = days;
-  document.getElementById("hours1").innerHTML = hours;
-  document.getElementById("minutes1").innerHTML = minutes;
-  document.getElementById("seconds1").innerHTML = seconds;
-  // If the count down is over, write some text
-  if (distance < 0) {
-   clearInterval(x);
-   document.getElementById("days").innerHTML = "EXPIRED";
-  }
- }, 1000);
+   document.getElementById("weeks1").innerHTML = weeks;
+   document.getElementById("days1").innerHTML = days;
+   document.getElementById("hours1").innerHTML = hours;
+   document.getElementById("minutes1").innerHTML = minutes;
+   document.getElementById("seconds1").innerHTML = seconds;
+   // If the count down is over, write some text
+   if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("days").innerHTML = "EXPIRED";
+   }
+  }, 1000);
 </script>
