--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -9,77 +9,105 @@ permalink: "patterns/link-grid.html"
 
 <nav class="page-navigation"></nav>
 
-
-<p>The link grid organizes the frequently used pages or top level calls to action. It guides people to important
- services and topics.</p>
-<p>When viewed on a computer, the grid is a maximum of 3 links wide. On mobile devices, this grid stacks into a single
- column.</p>
+<p>
+  The link grid organizes the frequently used pages or top level calls to
+  action. It guides people to important services and topics.
+</p>
+<p>
+  When viewed on a computer, the grid is a maximum of 3 links wide. On mobile
+  devices, this grid stacks into a single column.
+</p>
 
 <h2>Sample</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <h4 class="my-0 w-100">
+        <a
+          data-bs-toggle="collapse"
+          href="#collapse-example1"
+          aria-expanded="true"
+          aria-controls="collapse-example1"
+          data-hash="#pane-example1"
+          title="Example tab header">
+          Example
+        </a>
+      </h4>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm p-b-lg p-t-lg">
+        {% include "../../src/_includes/modules/link-grid.html" %}
+      </div>
+    </div>
+  </section>
 
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <h4 class="my-0 w-100">
-    <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-     data-hash="#pane-example1" title="Example tab header">
-     Example
-    </a>
-   </h4>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm p-b-lg p-t-lg">
-    {% include "../../src/_includes/modules/link-grid.html" %}
-   </div>
-  </div>
- </section>
-
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <h4 class="my-0 w-100">
-    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-     aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-     Source code
-    </a>
-   </h4>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/link-grid.html" %}</code></pre>
-
-   </div>
-  </div>
- </section>
-
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <h4 class="my-0 w-100">
+        <a
+          class="collapsed"
+          data-bs-toggle="collapse"
+          href="#collapse-html1"
+          aria-expanded="false"
+          aria-controls="collapse-html1"
+          data-hash="#pane-html1"
+          title="HTML Source code tab header">
+          Source code
+        </a>
+      </h4>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/link-grid.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
-
 <h2>Usage</h2>
 <h3>When and how to use it</h3>
-<p>Use the link grid to highlight the top things people need. Organize the links in a way that makes sense for people’s
- primary needs and lead users to specific content.</p>
-<p>The link grid is typically used on the homepage of a site so visitors can find and get to useful content quickly.</p>
+<p>
+  Use the link grid to highlight the top things people need. Organize the links
+  in a way that makes sense for people’s primary needs and lead users to
+  specific content.
+</p>
+<p>
+  The link grid is typically used on the homepage of a site so visitors can find
+  and get to useful content quickly.
+</p>
 <p>Only use the link grid if you have two or more links to add to it.</p>
 <h3 id="how-not-to-use-it">How not to use it</h3>
-<p>Avoid using more than 9 links. The link grid is intended to highlight the most important content. The recommended
- maximum grid size is 3 rows by 3 columns.
+<p>
+  Avoid using more than 9 links. The link grid is intended to highlight the most
+  important content. The recommended maximum grid size is 3 rows by 3 columns.
 </p>
-<p>Because the grid collapses into one column on mobile, large grids may occupy several screens. This can hide lower
- links.</p>
+<p>
+  Because the grid collapses into one column on mobile, large grids may occupy
+  several screens. This can hide lower links.
+</p>
 
 <h2>Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
