--- a/pages/sample/page-navigation.html
+++ b/pages/sample/page-navigation.html
@@ -5,114 +5,152 @@ layout: components.njk
 permalink: "/components/page-navigation.html"
 ---
 
-
 <h1 class="mt-lg-0">Page navigation</h1>
 
 <nav class="page-navigation"></nav>
 
-<p>Page navigation lists and links to the level 2 headings (H2) of a webpage. It is placed at the top of the page.
- People can select a link to go directly to that section.</p>
+<p>
+  Page navigation lists and links to the level 2 headings (H2) of a webpage. It
+  is placed at the top of the page. People can select a link to go directly to
+  that section.
+</p>
 
-<p>This makes it easy to see what's on a page. It allows people to scan a page and know if they're in the right place.
+<p>
+  This makes it easy to see what's on a page. It allows people to scan a page
+  and know if they're in the right place.
 </p>
 
 <h2>Sample</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
-  <li>
-   <a href="#section3">Implementation notes</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+    <li>
+      <a href="#section3">Implementation notes</a>
+    </li>
+  </ul>
 
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">Two to five links</h3>
+        {% include "../../src/_includes/modules/page-navigation.html" %}
 
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">Two to five links</h3>
-    {% include "../../src/_includes/modules/page-navigation.html" %}
+        <h3 class="h4">Six or more links</h3>
+        {% include "../../src/_includes/modules/page-navigation-more.html" %}
+      </div>
+    </div>
+  </section>
 
-    <h3 class="h4">Six or more links</h3>
-    {% include "../../src/_includes/modules/page-navigation-more.html" %}
-   </div>
-  </div>
- </section>
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">Two to five links</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/page-navigation.html" %}</code></pre>
 
+        <h3 class="h4">Six or more links</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/page-navigation-more.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 
+  <!--Implementation notes-->
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-html2">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="Implementation notes tab header">
+        Implementation notes
+      </a>
+    </div>
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">Automatic generation</h3>
+        <p class="m-b">
+          To generate "On this page" navigation automatically insert following
+          code after your h1 heading:
+        </p>
+        <pre><code><nav class="page-navigation"></nav></code></pre>
 
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">Two to five links</h3>
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/page-navigation.html" %}</pre></code>
-
-
-    <h3 class="h4">Six or more links</h3>
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/page-navigation-more.html" %}</pre>
-    </code>
-   </div>
-  </div>
- </section>
-
-
- <!--Implementation notes-->
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-html2">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-    aria-controls="collapse-html2" data-hash="#pane-html2" title="Implementation notes tab header">
-    Implementation notes
-   </a>
-  </div>
-  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">Automatic generation</h3>
-    <p class="m-b">To generate "On this page" navigation automatically insert following code after your h1 heading:
-    </p>
-    <pre><code><nav class="page-navigation"></nav></code></pre>
-
-    <h3 class="h4">Headings IDs</h3>
-    <p>With automatic page generation you don't have to add ID attributes into your h2 headings. Those IDs will be
-     added automatically
-     based on h2 heading text. For instance, if h2 text is "List accordion" the corresponding ID attribute will be
-     <code>id="List-accordion"</code>. But if you prefer to use non-automatic page navigation then you will have to add
-     IDs to each h2 heading and add anchor links to those h2 headings in your page navigation manually.
-    </p>
-   </div>
-  </div>
- </section>
-
-
+        <h3 class="h4">Headings IDs</h3>
+        <p>
+          With automatic page generation you don't have to add ID attributes
+          into your h2 headings. Those IDs will be added automatically based on
+          h2 heading text. For instance, if h2 text is "List accordion" the
+          corresponding ID attribute will be
+          <code>id="List-accordion"</code>
+          . But if you prefer to use non-automatic page navigation then you will
+          have to add IDs to each h2 heading and add anchor links to those h2
+          headings in your page navigation manually.
+        </p>
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2>Usage</h2>
 <h3>When and how to use it</h3>
-<p>Use page navigation when you have at least two sections of content on your page. Anchor links are split into two
- columns if there are six or more sections. If the section is uneven, the second column will have one less link.</p>
+<p>
+  Use page navigation when you have at least two sections of content on your
+  page. Anchor links are split into two columns if there are six or more
+  sections. If the section is uneven, the second column will have one less link.
+</p>
 
 <h3>How not to use it</h3>
-<p>Do not use the page navigation to anchor to H3s or H4s on your page. This is for navigation, not outlining content.
+<p>
+  Do not use the page navigation to anchor to H3s or H4s on your page. This is
+  for navigation, not outlining content.
 </p>
 
 <h2>Accessibility</h2>
