--- a/pages/sample/progress-bar.html
+++ b/pages/sample/progress-bar.html
@@ -9,60 +9,84 @@ permalink: "components/progress-bar.html"
 
 <nav class="page-navigation"></nav>
 
-<p>The progress bar displays the current status of a multi-step task. It is usually updated continuously as the task
- progresses and shows the level of completeness.</p>
+<p>
+  The progress bar displays the current status of a multi-step task. It is
+  usually updated continuously as the task progresses and shows the level of
+  completeness.
+</p>
 
 <h2>Sample</h2>
 
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm p-t-md p-b-md">
-    {% include "../../src/_includes/modules/progress-bar.html" %}
-   </div>
-  </div>
- </section>
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm p-t-md p-b-md">
+        {% include "../../src/_includes/modules/progress-bar.html" %}
+      </div>
+    </div>
+  </section>
 
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-bar.html" %}</code></pre>
-
-   </div>
-  </div>
- </section>
-
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-bar.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2>Usage</h2>
 <h3>When and how to use it</h3>
-<p>Use a progress bar to display completeness of a multi-step task. Completeness is often shown as a percentage or
- number completed out of a total number of steps.</p>
+<p>
+  Use a progress bar to display completeness of a multi-step task. Completeness
+  is often shown as a percentage or number completed out of a total number of
+  steps.
+</p>
 <p>Steps can include uploading files or submitting an application.</p>
 
 <h3>How not to use it</h3>
