--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -4,175 +4,252 @@ landing: Patterns
 layout: patterns.njk
 permalink: "patterns/progress-tracker.html"
 ---
+
 <h1 class="mt-lg-0 m-b-0">Progress tracker</h1>
 <p class="subtitle">Other names: process indicator, step list</p>
 
 <nav aria-labelledby="page-navigation-label" class="page-navigation">
- <div id="page-navigation-label" class="label">On this page</div>
- <ul class="columns-2">
-  <li><a href="#Horizontal-tracker">Horizontal tracker</a></li>
-  <li><a href="#Vertical-tracker">Vertical tracker</a></li>
-  <li><a href="#Step-list">Step list</a></li>
-  <li><a href="#Usage">Usage</a></li>
-  <li><a href="#Accessibility">Accessibility</a></li>
- </ul>
+  <div id="page-navigation-label" class="label">On this page</div>
+  <ul class="columns-2">
+    <li><a href="#Horizontal-tracker">Horizontal tracker</a></li>
+    <li><a href="#Vertical-tracker">Vertical tracker</a></li>
+    <li><a href="#Step-list">Step list</a></li>
+    <li><a href="#Usage">Usage</a></li>
+    <li><a href="#Accessibility">Accessibility</a></li>
+  </ul>
 </nav>
 
-<p> A progress tracker displays the steps and progress through a journey.</p>
+<p>A progress tracker displays the steps and progress through a journey.</p>
 <p>Use the progress tracker to show:</p>
 <ul>
- <li>Milestones</li>
- <li>Timelines</li>
- <li>Chronological steps</li>
+  <li>Milestones</li>
+  <li>Timelines</li>
+  <li>Chronological steps</li>
 </ul>
 
 <h2 id="Horizontal-tracker">Horizontal tracker</h2>
 
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1"><span class="sr-only">Horizontal tracker </span>Example</a>
-  </li>
-  <li>
-   <a href="#section2"><span class="sr-only">Horizontal tracker </span>Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">
+        <span class="sr-only">Horizontal tracker</span>
+        Example
+      </a>
+    </li>
+    <li>
+      <a href="#section2">
+        <span class="sr-only">Horizontal tracker</span>
+        Source code
+      </a>
+    </li>
+  </ul>
 
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm p-y-md">
+        <h3 class="h4 m-t-0">Default</h3>
+        {% include "../../src/_includes/modules/progress-block.html" %}
 
+        <h3 class="h4">Bold</h3>
+        {% include "../../src/_includes/modules/progress-block-bold.html" %}
+      </div>
+    </div>
+  </section>
 
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm p-y-md">
-    <h3 class="h4 m-t-0">Default</h3>
-    {% include "../../src/_includes/modules/progress-block.html" %}
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <h3 class="h4 m-t-0">Default</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block.html" %}</code></pre>
 
-    <h3 class="h4">Bold</h3>
-    {% include "../../src/_includes/modules/progress-block-bold.html" %}
-   </div>
-  </div>
- </section>
-
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <h3 class="h4 m-t-0">Default</h3>
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block.html" %}</code></pre>
-
-    <h3 class="h4">Bold</h3>
-    <pre
-     style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block-bold.html" %}</code></pre>
-   </div>
-  </div>
- </section>
-
+        <h3 class="h4">Bold</h3>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/progress-block-bold.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 </div>
 
 <h2 id="Vertical-tracker">Vertical tracker</h2>
 
-
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section3"><span class="sr-only">Vertical tracker </span>Example</a>
-  </li>
-  <li>
-   <a href="#section4"><span class="sr-only">Vertical tracker </span>Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section3">
+        <span class="sr-only">Vertical tracker</span>
+        Example
+      </a>
+    </li>
+    <li>
+      <a href="#section4">
+        <span class="sr-only">Vertical tracker</span>
+        Source code
+      </a>
+    </li>
+  </ul>
 
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-example2">
-   <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-    data-hash="#pane-example2" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-   <div class="p-a-sm p-b-md">
-    {% include "../../src/_includes/modules/timeline.html" %}
-   </div>
-  </div>
- </section>
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-example2">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example2"
+        aria-expanded="true"
+        aria-controls="collapse-example2"
+        data-hash="#pane-example2"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example2"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example2">
+      <div class="p-a-sm p-b-md">
+        {% include "../../src/_includes/modules/timeline.html" %}
+      </div>
+    </div>
+  </section>
 
- <section id="section4" class="tab-pane">
-  <div class="card-header" id="heading-html2">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-    aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/timeline.html" %}</code></pre>
-   </div>
-  </div>
- </section>
-
+  <section id="section4" class="tab-pane">
+    <div class="card-header" id="heading-html2">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/timeline.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 </div>
 
 <h2 id="Step-list">Step list</h2>
 
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section5">Example</a>
-  </li>
-  <li>
-   <a href="#section6">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section5">Example</a>
+    </li>
+    <li>
+      <a href="#section6">Source code</a>
+    </li>
+  </ul>
 
- <section id="section5" class="tab-pane">
-  <div class="card-header" id="heading-example3">
-   <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-    data-hash="#pane-example3" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
-   <div class="p-a-sm p-b-0 p-t-lg">
-    {% include "../../src/_includes/modules/step-list.html" %}
-   </div>
-  </div>
- </section>
+  <section id="section5" class="tab-pane">
+    <div class="card-header" id="heading-example3">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
+      <div class="p-a-sm p-b-0 p-t-lg">
+        {% include "../../src/_includes/modules/step-list.html" %}
+      </div>
+    </div>
+  </section>
 
- <section id="section6" class="tab-pane">
-  <div class="card-header" id="heading-html3">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-    aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/step-list.html" %}</code></pre>
-   </div>
-  </div>
- </section>
-
+  <section id="section6" class="tab-pane">
+    <div class="card-header" id="heading-html3">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
+      <div class="p-a-sm">
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/step-list.html" %}</code></pre>
+      </div>
+    </div>
+  </section>
 </div>
 
 <h2 id="Usage">Usage</h2>
 <h3>When and how to use it</h3>
-<p>The progress tracker shows visitors where they are in a process. It can be used to help visitors navigate through
- processes by selecting steps.</p>
-<p>Progress trackers should display three or more steps or events in a sequence.</p>
+<p>
+  The progress tracker shows visitors where they are in a process. It can be
+  used to help visitors navigate through processes by selecting steps.
+</p>
+<p>
+  Progress trackers should display three or more steps or events in a sequence.
+</p>
 
 <h3>How not to use it</h3>
-<p>Do not use the progress tracker to display items that are out of order or unrelated. Use bullet points instead.</p>
-<p>Do not use the progress tracker component if there is not a fleshed out process to track.</p>
+<p>
+  Do not use the progress tracker to display items that are out of order or
+  unrelated. Use bullet points instead.
+</p>
+<p>
+  Do not use the progress tracker component if there is not a fleshed out
+  process to track.
+</p>
 
 <h2 id="Accessibility">Accessibility</h2>
 {% include "../../src/_includes/modules/accessibility.html" %}
