--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -5,183 +5,240 @@ layout: page.njk
 permalink: "structure/footer.html"
 ---
 
-
 <div class="row">
- <div class="col-md-3" role="complementary">
-  <!-- Side navigation -->
-  <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
-   <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
-    <li><a href="/structure/utility-header.html">Utility header</a></li>
-    <li><a href="/structure/settings.html">Settings</a></li>
-    <li><a href="/structure/site-header.html">Site header</a></li>
-    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-    <li><a href="/structure/search.html">Search</a></li>
-    <li><a href="/structure/site-navigation.html">Site navigation</a></li>
-    <li><a href="/structure/footer.html" class="active">Footer</a></li>
-   </ul>
-  </nav>
- </div>
- <div class="col-md-9 m-b-lg">
-
-  <h1 class="mt-lg-0">Footer</h1>
-  <nav class="page-navigation"></nav>
-  <p>The footer is a structural component that puts the state's standard footer at the very bottom of your
-   site. Having a common footer tells people that the website is an official product of the State of California, which
-   increases user trust.</p>
-  <p>The footer contains a set of links that go on all the pages of the website.</p>
-  <p>The footer always includes:</p>
-  <ul>
-   <li>The CA<span>.</span>gov logo on the left that links to the CA<span>.</span>gov site.</li>
-   <li>A set of standard links:<ul>
-     <li>Conditions of use</li>
-     <li>Privacy policy</li>
-     <li>Accessibility certification</li>
-     <li>Contact page for your organization</li>
-    </ul>
-   </li>
-
-   <li>The copyright notice.</li>
-  </ul>
-
-
-  <p>The footer can also include:</p>
-  <ul>
-   <li>An optional logo on the left that links back to the homepage for the website.</li>
-   <li>Customizable links.</li>
-   <li>Social media icons that link to official social media accounts. These could be for a department or a campaign.
-    The available social media icons include:
-    <ul>
-     <li>Facebook</li>
-     <li>Twitter</li>
-     <li>Instagram</li>
-     <li>YouTube</li>
-     <li>Github</li>
-     <li>LinkedIn</li>
-     <li>Email</li>
-    </ul>
-   </li>
-  </ul>
-
-  <h2>Sample</h2>
-
-  <div class="tabs responsive">
-   <ul class="nav-tabs">
-    <li>
-     <a href="#section1">Example</a>
-    </li>
-    <li>
-     <a href="#section2">Source code</a>
-    </li>
-    <li>
-     <a href="#section3">Eleventy include</a>
-    </li>
-   </ul>
-
-   <section id="section1" class="tab-pane">
-    <div class="card-header" id="heading-example2">
-     <h4 class="my-0 w-100">
-      <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-       title="Example tab header">
-       Example
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-example2" class="collapse show  p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">Desktop</h3>
-      <img src="/images/components/strucutre-global-footer.jpg" alt="global footer screenshot" class="img-fluid">
-
-      <h3 class="h4">Mobile</h3>
-      <div class="col-md-6">
-       <img src="/images/components/strucutre-global-footer-mobile.jpg" alt="Mobile global footer screenshot"
-        class="img-fluid">
-      </div>
-
-     </div>
-
-    </div>
-   </section>
-
-   <section id="section2" class="tab-pane">
-    <div class="card-header" id="heading-html2">
-     <h4 class="my-0 w-100">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-       aria-controls="collapse-html2" title="HTML Source code tab header">
-       HTML Source code
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">HTML</h3>
-      <pre><code>{% include "../../src/_includes/global-footer.njk" %}</code>
-       </pre>
-     </div>
-    </div>
-   </section>
-
-   <section id="section3" class="tab-pane">
-    <div class="card-header" id="heading-include2">
-     <h4 class="my-0 w-100">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" aria-expanded="false"
-       aria-controls="collapse-include2" title="Eleventy Include tab header">
-       Eleventy include
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-include2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-include2">
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">Include path</h3>
-      <p class="m-b">Add Global Footer <code>njk</code> include code before closing <code>&lt;/body&gt;</code> tag:
-      </p>
-      <pre><code>&#123;% include "src/_includes/global-footer.njk" %&#125;</code></pre>
-
-      <p class="m-t"><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the
-       directory of
-       your
-       page.</p>
-     </div>
-    </div>
-   </section>
-
+  <div class="col-md-3" role="complementary">
+    <!-- Side navigation -->
+    <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
+      <ul class="list-navigation">
+        <li>
+          <a href="/structure.html" id="navigation-list" class="landing">
+            Structure
+          </a>
+        </li>
+        <li><a href="/structure/utility-header.html">Utility header</a></li>
+        <li><a href="/structure/settings.html">Settings</a></li>
+        <li><a href="/structure/site-header.html">Site header</a></li>
+        <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+        <li><a href="/structure/search.html">Search</a></li>
+        <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+        <li><a href="/structure/footer.html" class="active">Footer</a></li>
+      </ul>
+    </nav>
   </div>
+  <div class="col-md-9 m-b-lg">
+    <h1 class="mt-lg-0">Footer</h1>
+    <nav class="page-navigation"></nav>
+    <p>
+      The footer is a structural component that puts the state's standard footer
+      at the very bottom of your site. Having a common footer tells people that
+      the website is an official product of the State of California, which
+      increases user trust.
+    </p>
+    <p>
+      The footer contains a set of links that go on all the pages of the
+      website.
+    </p>
+    <p>The footer always includes:</p>
+    <ul>
+      <li>
+        The CA
+        <span>.</span>
+        gov logo on the left that links to the CA
+        <span>.</span>
+        gov site.
+      </li>
+      <li>
+        A set of standard links:
+        <ul>
+          <li>Conditions of use</li>
+          <li>Privacy policy</li>
+          <li>Accessibility certification</li>
+          <li>Contact page for your organization</li>
+        </ul>
+      </li>
 
+      <li>The copyright notice.</li>
+    </ul>
 
+    <p>The footer can also include:</p>
+    <ul>
+      <li>
+        An optional logo on the left that links back to the homepage for the
+        website.
+      </li>
+      <li>Customizable links.</li>
+      <li>
+        Social media icons that link to official social media accounts. These
+        could be for a department or a campaign. The available social media
+        icons include:
+        <ul>
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
+          <li>YouTube</li>
+          <li>Github</li>
+          <li>LinkedIn</li>
+          <li>Email</li>
+        </ul>
+      </li>
+    </ul>
 
-  <h2>Usage</h2>
-  <h3>When and how to use it</h3>
-  <p>The footer goes on all pages of your website.</p>
-  <p>Examples of links that go in the site footer include:</p>
-  <ul>
-   <li>General department info</li>
-   <li>Department accessibility information</li>
-   <li>Careers page</li>
-   <li>Contact page for the site</li>
-  </ul>
-  <p>Make sure you do not duplicate link text in the footer. Using different link text that takes visitors to the same
-   place confuses people and causes accessibility issues. </p>
-  <p>Link the social media icons to your official social media accounts.</p>
-  <p>Provide a contact page that's relevant to your site. </p>
-  <h3>How not to use it</h3>
+    <h2>Sample</h2>
 
-  <p>Do not use the site footer:</p>
+    <div class="tabs responsive">
+      <ul class="nav-tabs">
+        <li>
+          <a href="#section1">Example</a>
+        </li>
+        <li>
+          <a href="#section2">Source code</a>
+        </li>
+        <li>
+          <a href="#section3">Eleventy include</a>
+        </li>
+      </ul>
 
-  <ul>
-   <li>For primary calls to action</li>
-   <li>For information to primary user needs</li>
-   <li>As secondary navigation</li>
-  </ul>
-  <p>Do not add other elements to or change the footer. Use it only as designed. </p>
-  <p>Do not send them to the general <a href="https://www.ca.gov/contact/">CA.gov contact page</a> unless it's
-   appropriate to do so.</p>
-  <p>Do not include more than one social media account per platform.</p>
+      <section id="section1" class="tab-pane">
+        <div class="card-header" id="heading-example2">
+          <h4 class="my-0 w-100">
+            <a
+              data-bs-toggle="collapse"
+              href="#collapse-example2"
+              aria-expanded="true"
+              aria-controls="collapse-example2"
+              title="Example tab header">
+              Example
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-example2"
+          class="collapse show  p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-example2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">Desktop</h3>
+            <img
+              src="/images/components/strucutre-global-footer.jpg"
+              alt="global footer screenshot"
+              class="img-fluid" />
 
-  <h2>Accessibility</h2>
-  {% include "../../src/_includes/modules/accessibility.html" %}
+            <h3 class="h4">Mobile</h3>
+            <div class="col-md-6">
+              <img
+                src="/images/components/strucutre-global-footer-mobile.jpg"
+                alt="Mobile global footer screenshot"
+                class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section id="section2" class="tab-pane">
+        <div class="card-header" id="heading-html2">
+          <h4 class="my-0 w-100">
+            <a
+              class="collapsed"
+              data-bs-toggle="collapse"
+              href="#collapse-html2"
+              aria-expanded="false"
+              aria-controls="collapse-html2"
+              title="HTML Source code tab header">
+              HTML Source code
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-html2"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-html2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">HTML</h3>
+            <pre><code>{% include "../../src/_includes/global-footer.njk" %}</code>
+       </pre>
+          </div>
+        </div>
+      </section>
 
+      <section id="section3" class="tab-pane">
+        <div class="card-header" id="heading-include2">
+          <h4 class="my-0 w-100">
+            <a
+              class="collapsed"
+              data-bs-toggle="collapse"
+              href="#collapse-include2"
+              aria-expanded="false"
+              aria-controls="collapse-include2"
+              title="Eleventy Include tab header">
+              Eleventy include
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-include2"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-include2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">Include path</h3>
+            <p class="m-b">
+              Add Global Footer
+              <code>njk</code>
+              include code before closing
+              <code>&lt;/body&gt;</code>
+              tag:
+            </p>
+            <pre><code>&#123;% include "src/_includes/global-footer.njk" %&#125;</code></pre>
 
- </div>
+            <p class="m-t">
+              <span class="text-highlight-primary">Note:</span>
+              Path to the include will be relative to the directory of your
+              page.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <h2>Usage</h2>
+    <h3>When and how to use it</h3>
+    <p>The footer goes on all pages of your website.</p>
+    <p>Examples of links that go in the site footer include:</p>
+    <ul>
+      <li>General department info</li>
+      <li>Department accessibility information</li>
+      <li>Careers page</li>
+      <li>Contact page for the site</li>
+    </ul>
+    <p>
+      Make sure you do not duplicate link text in the footer. Using different
+      link text that takes visitors to the same place confuses people and causes
+      accessibility issues.
+    </p>
+    <p>Link the social media icons to your official social media accounts.</p>
+    <p>Provide a contact page that's relevant to your site.</p>
+    <h3>How not to use it</h3>
+
+    <p>Do not use the site footer:</p>
+
+    <ul>
+      <li>For primary calls to action</li>
+      <li>For information to primary user needs</li>
+      <li>As secondary navigation</li>
+    </ul>
+    <p>
+      Do not add other elements to or change the footer. Use it only as
+      designed.
+    </p>
+    <p>
+      Do not send them to the general
+      <a href="https://www.ca.gov/contact/">CA.gov contact page</a>
+      unless it's appropriate to do so.
+    </p>
+    <p>Do not include more than one social media account per platform.</p>
+
+    <h2>Accessibility</h2>
+    {% include "../../src/_includes/modules/accessibility.html" %}
+  </div>
 </div>
