--- a/pages/sample/structure-search-inactive.html
+++ b/pages/sample/structure-search-inactive.html
@@ -6,12 +6,14 @@ permalink: "structure/search-inactive.html"
 navigation: "../modules/nav-icons.html"
 ---
 
-
 <div class="row">
- <div class="col-md-10 mx-auto">
-
-  <h1 class="mt-lg-0">Inactive search live example</h1>
-  <a href="/structure/search.html#Inactive-search" class="btn btn-outline-primary"><span class="ca-gov-icon-arrow-prev"
-    aria-hidden="true"></span> Back to search</a>
- </div>
+  <div class="col-md-10 mx-auto">
+    <h1 class="mt-lg-0">Inactive search live example</h1>
+    <a
+      href="/structure/search.html#Inactive-search"
+      class="btn btn-outline-primary">
+      <span class="ca-gov-icon-arrow-prev" aria-hidden="true"></span>
+      Back to search
+    </a>
+  </div>
 </div>
