--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -5,149 +5,201 @@ layout: page.njk
 permalink: "structure/utility-header.html"
 ---
 
-
 <div class="row">
- <div class="col-md-3" role="complementary">
-  <!-- Side navigation -->
-  <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
-   <ul class="list-navigation">
-    <li><a href="/structure.html" id="navigation-list" class="landing">Structure</a></li>
-    <li><a href="/structure/utility-header.html" class="active">Utility header</a></li>
-    <li><a href="/structure/settings.html">Settings</a></li>
-    <li><a href="/structure/site-header.html">Site header</a></li>
-    <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
-    <li><a href="/structure/search.html">Search</a></li>
-    <li><a href="/structure/site-navigation.html">Site navigation</a></li>
-    <li><a href="/structure/footer.html">Footer</a></li>
-   </ul>
-  </nav>
- </div>
- <div class="col-md-9 m-b-lg">
-
-
-  <h1 class="mt-lg-0">Utility header</h1>
-
-  <nav class="page-navigation"></nav>
-
-  <p>The utility header puts a standard header at the very top of your site. Having a common header tells
-   people that the website is an official product of the State of California, which increases user trust.</p>
-
-  <p>It includes:</p>
-  <ul>
-   <li>The CA.gov logo, which links to <a href="https://www.ca.gov">https://www.ca.gov</a></li>
-   <li>The text “Official website of the State of California” (on desktop) or “State of California” (on mobile)</li>
-   <li>Site-wide settings</li>
-  </ul>
-  </p>
-
-
-  <h2>Sample</h2>
-
-  <div class="tabs responsive">
-   <ul class="nav-tabs">
-    <li>
-     <a href="#section1">Example</a>
-    </li>
-    <li>
-     <a href="#section2">Source code</a>
-    </li>
-    <li>
-     <a href="#section3">Eleventy include</a>
-    </li>
-   </ul>
-
-
-
-   <section id="section1" class="tab-pane">
-    <div class="card-header" id="heading-example2">
-     <h4 class="my-0 w-100">
-      <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-       title="Example tab header">
-       Example
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">Desktop</h3>
-      <img src="/images/components/structure-utility-header.svg" alt="Utility header screenshot" class="img-fluid">
-
-      <h3 class="h4">Mobile</h3>
-      <div class="col-md-6">
-       <img src="/images/components/structure-utility-header-mobile.svg" alt="Mobile utility header screenshot"
-        class="img-fluid">
-      </div>
-
-     </div>
-    </div>
-   </section>
-
-   <section id="section2" class="tab-pane">
-    <div class="card-header" id="heading-html2">
-     <h4 class="my-0 w-100">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-       aria-controls="collapse-html2" title="HTML Source code tab header">
-       HTML Source code
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">HTML</h3>
-      <pre><code>{% include "../../src/_includes/utility-header.njk" %}</code>
-       </pre>
-     </div>
-    </div>
-   </section>
-
-   <section id="section3" class="tab-pane">
-    <div class="card-header" id="heading-include2">
-     <h4 class="my-0 w-100">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" aria-expanded="false"
-       aria-controls="collapse-include2" title="Eleventy Include tab header">
-       Eleventy include
-      </a>
-     </h4>
-    </div>
-    <div id="collapse-include2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-include2">
-     <div class="p-a-sm">
-      <h3 class="h4 m-t-0">Include path</h3>
-      <p class="m-b">Add this <code>njk</code> include code above the
-       Site Header, Settings and all other content:
-      </p>
-      <pre><code>&#123;% include "src/_includes/utility-header.njk" %&#125;</code></pre>
-
-      <p class="m-t"><span class="text-highlight-primary">Note:</span> Path to the include will be relative to the
-       directory of
-       your
-       page.</p>
-     </div>
-    </div>
-   </section>
-
+  <div class="col-md-3" role="complementary">
+    <!-- Side navigation -->
+    <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
+      <ul class="list-navigation">
+        <li>
+          <a href="/structure.html" id="navigation-list" class="landing">
+            Structure
+          </a>
+        </li>
+        <li>
+          <a href="/structure/utility-header.html" class="active">
+            Utility header
+          </a>
+        </li>
+        <li><a href="/structure/settings.html">Settings</a></li>
+        <li><a href="/structure/site-header.html">Site header</a></li>
+        <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
+        <li><a href="/structure/search.html">Search</a></li>
+        <li><a href="/structure/site-navigation.html">Site navigation</a></li>
+        <li><a href="/structure/footer.html">Footer</a></li>
+      </ul>
+    </nav>
   </div>
+  <div class="col-md-9 m-b-lg">
+    <h1 class="mt-lg-0">Utility header</h1>
 
-  <h2>Usage</h2>
-  <h3>When and how to use it</h3>
+    <nav class="page-navigation"></nav>
 
-  <p>The utility header is a required webpage structure component. Place it at the top of the website, above the
-   department branding (site header) and all other content.</p>
+    <p>
+      The utility header puts a standard header at the very top of your site.
+      Having a common header tells people that the website is an official
+      product of the State of California, which increases user trust.
+    </p>
 
-  <p>If you want to include a translation widget in the utility header, <a href="/contact-us.html">reach out through our
-    Contact page</a>. </p>
+    <p>It includes:</p>
+    <ul>
+      <li>
+        The CA.gov logo, which links to
+        <a href="https://www.ca.gov">https://www.ca.gov</a>
+      </li>
+      <li>
+        The text “Official website of the State of California” (on desktop) or
+        “State of California” (on mobile)
+      </li>
+      <li>Site-wide settings</li>
+    </ul>
 
-  <h3>How not to use it</h3>
+    <h2>Sample</h2>
 
-  <p>Do not add other elements to or change the utility header. Use it only as designed.</p>
+    <div class="tabs responsive">
+      <ul class="nav-tabs">
+        <li>
+          <a href="#section1">Example</a>
+        </li>
+        <li>
+          <a href="#section2">Source code</a>
+        </li>
+        <li>
+          <a href="#section3">Eleventy include</a>
+        </li>
+      </ul>
 
-  <p>Do not combine the utility header with department name or logo, navigation, or information. These are in the <a
-    href="/structure/site-header.html">site header</a>.</p>
+      <section id="section1" class="tab-pane">
+        <div class="card-header" id="heading-example2">
+          <h4 class="my-0 w-100">
+            <a
+              data-bs-toggle="collapse"
+              href="#collapse-example2"
+              aria-expanded="true"
+              aria-controls="collapse-example2"
+              title="Example tab header">
+              Example
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-example2"
+          class="collapse show p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-example2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">Desktop</h3>
+            <img
+              src="/images/components/structure-utility-header.svg"
+              alt="Utility header screenshot"
+              class="img-fluid" />
 
+            <h3 class="h4">Mobile</h3>
+            <div class="col-md-6">
+              <img
+                src="/images/components/structure-utility-header-mobile.svg"
+                alt="Mobile utility header screenshot"
+                class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section id="section2" class="tab-pane">
+        <div class="card-header" id="heading-html2">
+          <h4 class="my-0 w-100">
+            <a
+              class="collapsed"
+              data-bs-toggle="collapse"
+              href="#collapse-html2"
+              aria-expanded="false"
+              aria-controls="collapse-html2"
+              title="HTML Source code tab header">
+              HTML Source code
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-html2"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-html2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">HTML</h3>
+            <pre><code>{% include "../../src/_includes/utility-header.njk" %}</code>
+       </pre>
+          </div>
+        </div>
+      </section>
 
+      <section id="section3" class="tab-pane">
+        <div class="card-header" id="heading-include2">
+          <h4 class="my-0 w-100">
+            <a
+              class="collapsed"
+              data-bs-toggle="collapse"
+              href="#collapse-include2"
+              aria-expanded="false"
+              aria-controls="collapse-include2"
+              title="Eleventy Include tab header">
+              Eleventy include
+            </a>
+          </h4>
+        </div>
+        <div
+          id="collapse-include2"
+          class="collapse p-0 m-0 brd-0"
+          role="tabpanel"
+          aria-labelledby="heading-include2">
+          <div class="p-a-sm">
+            <h3 class="h4 m-t-0">Include path</h3>
+            <p class="m-b">
+              Add this
+              <code>njk</code>
+              include code above the Site Header, Settings and all other
+              content:
+            </p>
+            <pre><code>&#123;% include "src/_includes/utility-header.njk" %&#125;</code></pre>
 
-  <h2>Accessibility</h2>
-  {% include "../../src/_includes/modules/accessibility.html" %}
+            <p class="m-t">
+              <span class="text-highlight-primary">Note:</span>
+              Path to the include will be relative to the directory of your
+              page.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
 
- </div>
+    <h2>Usage</h2>
+    <h3>When and how to use it</h3>
+
+    <p>
+      The utility header is a required webpage structure component. Place it at
+      the top of the website, above the department branding (site header) and
+      all other content.
+    </p>
+
+    <p>
+      If you want to include a translation widget in the utility header,
+      <a href="/contact-us.html">reach out through our Contact page</a>
+      .
+    </p>
+
+    <h3>How not to use it</h3>
+
+    <p>
+      Do not add other elements to or change the utility header. Use it only as
+      designed.
+    </p>
+
+    <p>
+      Do not combine the utility header with department name or logo,
+      navigation, or information. These are in the
+      <a href="/structure/site-header.html">site header</a>
+      .
+    </p>
+
+    <h2>Accessibility</h2>
+    {% include "../../src/_includes/modules/accessibility.html" %}
+  </div>
 </div>
