--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -9,173 +9,240 @@ permalink: "components/table.html"
 
 <nav class="page-navigation"></nav>
 
-<p>A table displays data in rows and columns. </p>
+<p>A table displays data in rows and columns.</p>
 
 <h2>Basic</h2>
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section1">Example</a>
-  </li>
-  <li>
-   <a href="#section2">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section1">Example</a>
+    </li>
+    <li>
+      <a href="#section2">Source code</a>
+    </li>
+  </ul>
 
-
- <!--Examples-->
- <section id="section1" class="tab-pane">
-  <div class="card-header" id="heading-example1">
-   <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-    data-hash="#pane-example1" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
-   <div class="p-a-sm">
-
-    {% include "../../src/_includes/modules/table.html" %}
-
-   </div>
-  </div>
- </section>
- <!--HTML-->
- <section id="section2" class="tab-pane">
-  <div class="card-header" id="heading-html1">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-    aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;">
+  <!--Examples-->
+  <section id="section1" class="tab-pane">
+    <div class="card-header" id="heading-example1">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/table.html" %}
+      </div>
+    </div>
+  </section>
+  <!--HTML-->
+  <section id="section2" class="tab-pane">
+    <div class="card-header" id="heading-html1">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
+      <div class="p-a-sm">
+        <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table.html" %}</code>
      </pre>
-   </div>
-  </div>
- </section>
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2>Shaded</h2>
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section3">Example</a>
-  </li>
-  <li>
-   <a href="#section4">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section3">Example</a>
+    </li>
+    <li>
+      <a href="#section4">Source code</a>
+    </li>
+  </ul>
 
-
- <!--Examples-->
- <section id="section3" class="tab-pane">
-  <div class="card-header" id="heading-example2">
-   <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-    data-hash="#pane-example2" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
-   <div class="p-a-sm">
-
-    {% include "../../src/_includes/modules/table-default.html" %}
-
-   </div>
-  </div>
- </section>
- <!--HTML-->
- <section id="section4" class="tab-pane">
-  <div class="card-header" id="heading-html2">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-    aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;">
+  <!--Examples-->
+  <section id="section3" class="tab-pane">
+    <div class="card-header" id="heading-example2">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example2"
+        aria-expanded="true"
+        aria-controls="collapse-example2"
+        data-hash="#pane-example2"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example2"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example2">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/table-default.html" %}
+      </div>
+    </div>
+  </section>
+  <!--HTML-->
+  <section id="section4" class="tab-pane">
+    <div class="card-header" id="heading-html2">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
+      <div class="p-a-sm">
+        <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-default.html" %}</code>
     </pre>
-   </div>
-  </div>
- </section>
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2>Zebra</h2>
 <!--TABS-->
 <div class="tabs responsive">
- <ul class="nav-tabs">
-  <li>
-   <a href="#section5">Example</a>
-  </li>
-  <li>
-   <a href="#section6">Source code</a>
-  </li>
- </ul>
+  <ul class="nav-tabs">
+    <li>
+      <a href="#section5">Example</a>
+    </li>
+    <li>
+      <a href="#section6">Source code</a>
+    </li>
+  </ul>
 
-
- <!--Examples-->
- <section id="section5" class="tab-pane">
-  <div class="card-header" id="heading-example3">
-   <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-    data-hash="#pane-example3" title="Example tab header">
-    Example
-   </a>
-  </div>
-  <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
-   <div class="p-a-sm">
-
-    {% include "../../src/_includes/modules/table-striped.html" %}
-
-   </div>
-  </div>
- </section>
- <!--HTML-->
- <section id="section6" class="tab-pane">
-  <div class="card-header" id="heading-html3">
-   <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-    aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
-    Source code
-   </a>
-  </div>
-  <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
-   <div class="p-a-sm">
-    <pre style="max-height: 300px;">
+  <!--Examples-->
+  <section id="section5" class="tab-pane">
+    <div class="card-header" id="heading-example3">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
+        Example
+      </a>
+    </div>
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
+      <div class="p-a-sm">
+        {% include "../../src/_includes/modules/table-striped.html" %}
+      </div>
+    </div>
+  </section>
+  <!--HTML-->
+  <section id="section6" class="tab-pane">
+    <div class="card-header" id="heading-html3">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
+        Source code
+      </a>
+    </div>
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
+      <div class="p-a-sm">
+        <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-striped.html" %}</code>
     </pre>
-   </div>
-  </div>
- </section>
-
+      </div>
+    </div>
+  </section>
 </div>
 <!--END TABS-->
 
 <h2>Usage</h2>
 <h3>When and how to use it</h3>
-<p>A table helps visitors scan and understand information by grouping similar content.</p>
-<p>Use the table component to show long lists of sequential or structured content. This makes your content easier to
- read and compare.</p>
-<p>Tables also help users find specific information within a large data set. For example, someone looking for their body
- mass index (BMI) might find it easier to spot the intersection of their height and weight than reading a paragraph of
- text.</p>
-<p>A table should include a table caption to provide brief descriptive text about the data. Tables must identify any row
- and column headers. Table headers should never be empty.</p>
+<p>
+  A table helps visitors scan and understand information by grouping similar
+  content.
+</p>
+<p>
+  Use the table component to show long lists of sequential or structured
+  content. This makes your content easier to read and compare.
+</p>
+<p>
+  Tables also help users find specific information within a large data set. For
+  example, someone looking for their body mass index (BMI) might find it easier
+  to spot the intersection of their height and weight than reading a paragraph
+  of text.
+</p>
+<p>
+  A table should include a table caption to provide brief descriptive text about
+  the data. Tables must identify any row and column headers. Table headers
+  should never be empty.
+</p>
 
 <h3>How not to use it</h3>
-<p>Tables do not inherently place information in a logical order. Determine the best order for your content (sequential,
- chronological, alphabetical), and keep it consistent.</p>
-<p>Avoid using tables to display long-form content. Consider using a normal page with headings instead.</p>
-<p>Also avoid complex tables with multiple merged cells; these are hard to understand and difficult to make accessible.
- Instead, consider using more than one table.</p>
-<p>Do not use a table to demonstrate complex relationships in the data. Use a bar graph, infographic or chart instead.
+<p>
+  Tables do not inherently place information in a logical order. Determine the
+  best order for your content (sequential, chronological, alphabetical), and
+  keep it consistent.
+</p>
+<p>
+  Avoid using tables to display long-form content. Consider using a normal page
+  with headings instead.
+</p>
+<p>
+  Also avoid complex tables with multiple merged cells; these are hard to
+  understand and difficult to make accessible. Instead, consider using more than
+  one table.
+</p>
+<p>
+  Do not use a table to demonstrate complex relationships in the data. Use a bar
+  graph, infographic or chart instead.
 </p>
 <p>Do not use a table to format a web page.</p>
 
